--- a/platformio.ini
+++ b/platformio.ini
@@ -37,9 +37,9 @@
 src_dir      = TFT
 boards_dir   = buildroot/boards
 ;Build only Target - BIGTREE_TFT35_V3_0
-;default_envs = MKS_TFT28_V1_0_ARTILLERY
+default_envs = MKS_TFT28_V1_0_ARTILLERY
 ;default_envs = MKS_TFT35_V1_0
-default_envs = BIGTREE_TFT35_V3_0
+;default_envs = BIGTREE_TFT35_V3_0
 ;default_envs = BIGTREE_TFT35_E3_V3_0
 ;default_envs = BIGTREE_TFT70_V3_0
 
