--- a/Copy to SD Card - BTT/config.ini
+++ b/Copy to SD Card - BTT/config.ini
@@ -773,6 +773,24 @@ lcd_idle_time:4
 #   Options: [disable: 0, enable: 1]
 lcd_lock_on_idle:0
 
+#### LED Color
+# Printer's LED color used by some features such as Event LED and PID processes.
+#   Format: [led_color: R:<component> G:<component> B:<component> W:<component> P:<component> I:<component>
+#   Target component: R: Red
+#                     G: Green
+#                     B: Blue
+#                     W: White;     NEOPIXEL or RGB(W)
+#                     P: Intensity; NEOPIXEL
+#                     I: Index;     NEOPIXEL
+#   Value range: [min: 0, max: 255]
+led_color:R:255 G:255 B:255 W:255 P:255 I:255
+
+#### LED Always ON
+# Keep printers's LED on at startup and after Event LED and PID processes terminate.
+# The printer's LED color is configured in "led_color".
+#   Options: [disable: 0, enable: 1]
+led_always_on:0
+
 #### Knob LED Color (only for TFT28/TFT35_E3/TFT43/TFT50/TFT70 V3.0)
 # Knob LED color at startup.
 #   Options: [OFF: 0, WHITE: 1, RED: 2, ORANGE: 3, YELLOW: 4, GREEN: 5, BLUE: 6, INDIGO: 7, VIOLET: 8]
