--- a/Copy to SD Card root directory to update/Language Packs/language_br.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_br.ini
@@ -36,6 +36,7 @@ label_lcd_brightness:Brilho
 label_lcd_idle_brightness:Brilho em descanso
 label_lcd_idle_time:Timer de brilho
 label_lcd_lock_on_idle:Bloqueio de LCD ocioso
+label_led_always_on:LED always ON
 label_knob_led_color:Knob LED
 label_knob_led_idle:Knob LED apagado
 label_start_gcode_enabled:Inserir gcode inicial
