--- a/Copy to SD Card root directory to update/Language Packs/language_fr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_fr.ini
@@ -4,15 +4,15 @@
 ## Escape characters are not supported except newline '\n'
 
 label_emulated_m600:Emuler M600
-label_emulated_m109_m190:Emulated M109 / M190
-label_event_led:Event LED
-label_file_comment_parsing:File comment parsing
+label_emulated_m109_m190:Emuler M109 / M190
+label_event_led:LED Neopixel
+label_file_comment_parsing:Analyse commentaires Gcode
 label_rotated_ui:Rotation
 label_language:Français
 label_ack_notification:Style de notification ACK
 label_files_sort_by:Trier les fichiers par
 label_files_list_mode:Fichiers en mode liste
-label_filename_extension:Show filename extension
+label_filename_extension:Extensions des fichiers
 label_fan_speed_percentage:Vitesse ventilateur en %
 label_persistent_info:Temp. toujours affichées
 label_terminal_ack:Afficher ACK sur Terminal
@@ -22,7 +22,7 @@ label_marlin_show_title:Titre en Mode Marlin
 label_marlin_type:Type du Mode Marlin
 label_move_speed:Vitesse de déplacement (X Y Z)
 label_auto_load_leveling:Auto-Sauvegarde Leveling
-label_probing_z_offset:Probing for Z offset
+label_probing_z_offset:Palpeur pour Z offset
 label_z_steppers_alignment:Auto-Alignement moteurs Z
 label_ps_auto_shutdown:Extinction automatique
 label_fil_runout:Capteur de filament
@@ -37,7 +37,7 @@ label_lcd_brightness:Luminosité
 label_lcd_idle_brightness:Diminution luminosité
 label_lcd_idle_time:Durée avant diminution
 label_lcd_lock_on_idle:Bloquer touches en veille
-label_led_always_on:LED always ON
+label_led_always_on:LED toujours allumées
 label_knob_led_color:LED du bouton rotatif
 label_knob_led_idle:Veille du bouton rotatif
 label_start_gcode_enabled:Gcode avant l'impression
@@ -132,7 +132,7 @@ label_ready:Prête
 label_busy:Occupée, veuillez patienter...
 label_loading:Chargement...
 label_unconnected:Aucune imprimante connectée !
-label_listening:TFT in Listening Mode!
+label_listening:TFT en mode écoute !
 label_info:Infos
 label_invalid_value:Aucune valeur valide fournie !
 label_timeout_reached:Délai d'attente dépassé !
@@ -144,17 +144,17 @@ label_process_running:Processus en cours ! Veuillez patienter
 label_process_completed:Processus terminé !
 label_process_aborted:Processus annulé !
 label_tftsd:SD TFT
-label_read_tftsd_error:Erreur de lecture de la carte SD TFT !
+label_read_tftsd_error:Erreur de lecture de la carte SD !
 label_tftsd_inserted:Carte insérée !
 label_tftsd_removed:Carte retirée !
-label_tftsd_not_detected:No SD Card detected.
-label_usb_disk:Clé USB
+label_tftsd_not_detected:Aucune carte SD détectée.
+label_usb_disk:USB TFT
 label_read_usb_disk_error:Erreur de lecture de la clé USB !
 label_usb_disk_inserted:Clé USB insérée !
 label_usb_disk_removed:Clé USB retirée !
-label_usb_disk_not_detected:No USB Disk detected.
-label_onboardsd:SD interne
-label_read_onboardsd_error:Erreur de lecture de la carte SD interne !
+label_usb_disk_not_detected:Aucune clé USB détectée.
+label_onboardsd:Port CM
+label_read_onboardsd_error:Erreur de lecture du port de la carte mère !
 label_filament_runout:Fin de Filament !
 label_disable_steppers:Moteurs
 label_xy_unlock:Moteurs XY
@@ -217,14 +217,14 @@ label_print:Imprimer
 label_extrude:Extruder
 label_settings:Options
 label_screen_settings:Écran
-label_ui_settings:UI
+label_ui_settings:Interface
 label_sound:Son
 label_marlin_mode_settings:Marlin
 label_machine_settings:Machine
 label_parameter_settings:Réglages
 label_feature_settings:Paramètres
 label_connection_settings:Connexion
-label_serial_ports:S. Ports
+label_serial_ports:Ports S.
 label_baudrate:Vitesse
 label_eeprom_settings:EEPROM
 label_rgb_settings:LED
@@ -331,5 +331,5 @@ label_macros:Macros
 label_mesh_valid:Test Mesh
 label_connect_probe:Connectez le palpeur avant de démarrer le processus. Veillez à le déconnecter ensuite.
 label_disconnect_probe:Assurez-vous d'avoir déconnecté le palpeur avant d'utiliser cette fonctionnalité.
-label_calibration:Calibrate
+label_calibration:Calibrer
 
