--- a/Copy to SD Card root directory to update/Language Packs/language_it.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_it.ini
@@ -1,5 +1,5 @@
 #### Language Code:IT
-## Language Version:20211111
+## Language Version:20220222
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -154,6 +154,7 @@ label_usb_disk_inserted:Pen drive inserita
 label_usb_disk_removed:Pen drive rimossa
 label_usb_disk_not_detected:Pen drive non rilevata!
 label_onboardsd:SD scheda
+label_onboardusb:USB scheda
 label_read_onboardsd_error:Errore lettura media su scheda!
 label_filament_runout:Filamento finito!
 label_disable_steppers:Motori
