--- a/Copy to SD Card root directory to update/Language Packs/language_fr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_fr.ini
@@ -1,5 +1,5 @@
 #### Language Code:FR
-## Language Version:20211111
+## Language Version:20220222
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -154,6 +154,7 @@ label_usb_disk_inserted:Clé USB insérée !
 label_usb_disk_removed:Clé USB retirée !
 label_usb_disk_not_detected:Aucune clé USB détectée.
 label_onboardsd:Port CM
+label_onboardusb:USB interne
 label_read_onboardsd_error:Erreur de lecture du port de la carte mère !
 label_filament_runout:Fin de Filament !
 label_disable_steppers:Moteurs
