--- a/Copy to SD Card root directory to update/Language Packs/language_cz.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cz.ini
@@ -1,5 +1,5 @@
 #### Language Code:CZ
-## Language Version:20220222
+## Language Version:20220321
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -58,6 +58,7 @@ label_hotend_offset:Offset 2.trysky
 label_stealth_chop:TMC Tichý režim
 label_delta_configuration:Delta konfigurace
 label_delta_tower_angle:Úhel věže
+label_delta_diagonal_rod:Diagonal Rod Trim
 label_delta_endstop:Nastavení dorazu
 label_probe_offset:Offset sondy
 label_lin_advance:Linear Advance
@@ -143,19 +144,19 @@ label_power_failed:Obnovit tisk?
 label_process_running:Probíhá proces!
 label_process_completed:Proces dokončen!
 label_process_aborted:Proces přerušen!
-label_tftsd:TFT SD
-label_read_tftsd_error:Chyba při čtení SD karty!
-label_tftsd_inserted:SD karta vložena!
-label_tftsd_removed:SD karta vyjmuta!
-label_tftsd_not_detected:SD karta není detekována.
-label_usb_disk:USB Disk
-label_read_usb_disk_error:Chyba při čtení USB disku!
-label_usb_disk_inserted:USB disk  vložen!
-label_usb_disk_removed:USB disk vyjmut!
-label_usb_disk_not_detected:USB není detekován.
-label_onboardsd:Onboard SD
-label_onboardusb:Onboard USB
-label_read_onboardsd_error:Chyba při čtení Onboard media!
+label_tft_sd:TFT SD
+label_tft_sd_read_error:Chyba při čtení SD karty!
+label_tft_sd_inserted:SD karta vložena!
+label_tft_sd_removed:SD karta vyjmuta!
+label_tft_sd_not_detected:SD karta není detekována.
+label_tft_usb:USB Disk
+label_tft_usb_read_error:Chyba při čtení USB disku!
+label_tft_usb_inserted:USB disk  vložen!
+label_tft_usb_removed:USB disk vyjmut!
+label_tft_usb_not_detected:USB není detekován.
+label_onboard_sd:Onboard SD
+label_onboard_usb:Onboard USB
+label_onboard_sd_read_error:Chyba při čtení Onboard media!
 label_filament_runout:Došel filament!
 label_disable_steppers:Motory
 label_xy_unlock:Uvolnit XY
@@ -167,6 +168,8 @@ label_test:Test
 label_deploy:Vysunout
 label_stow:Zasunout
 label_repeat:Přesnost
+label_hs_on:HS: On
+label_hs_off:HS: Off
 label_nozzle:Tryska
 label_bed:Stolek
 label_chamber:Komora
