--- a/Copy to SD Card root directory to update/Language Packs/language_fr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_fr.ini
@@ -1,5 +1,5 @@
 #### Language Code:FR
-## Language Version:20220222
+## Language Version:20220321
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -58,6 +58,7 @@ label_hotend_offset:Décalage 2ème buse
 label_stealth_chop:StealthChop TMC
 label_delta_configuration:Réglages Delta
 label_delta_tower_angle:Corrections d'angle des tours
+label_delta_diagonal_rod:Ajustements Diagonal Rod
 label_delta_endstop:Ajustements Endstop
 label_probe_offset:Décalage palpeur
 label_lin_advance:Linear Advance
@@ -143,19 +144,19 @@ label_power_failed:Continuer l'impression ?
 label_process_running:Processus en cours ! Veuillez patienter
 label_process_completed:Processus terminé !
 label_process_aborted:Processus annulé !
-label_tftsd:SD TFT
-label_read_tftsd_error:Erreur de lecture de la carte SD !
-label_tftsd_inserted:Carte insérée !
-label_tftsd_removed:Carte retirée !
-label_tftsd_not_detected:Aucune carte SD détectée.
-label_usb_disk:USB TFT
-label_read_usb_disk_error:Erreur de lecture de la clé USB !
-label_usb_disk_inserted:Clé USB insérée !
-label_usb_disk_removed:Clé USB retirée !
-label_usb_disk_not_detected:Aucune clé USB détectée.
-label_onboardsd:Port CM
-label_onboardusb:USB interne
-label_read_onboardsd_error:Erreur de lecture du port de la carte mère !
+label_tft_sd:SD TFT
+label_tft_sd_read_error:Erreur de lecture de la carte SD !
+label_tft_sd_inserted:Carte insérée !
+label_tft_sd_removed:Carte retirée !
+label_tft_sd_not_detected:Aucune carte SD détectée.
+label_tft_usb:USB TFT
+label_tft_usb_read_error:Erreur de lecture de la clé USB !
+label_tft_usb_inserted:Clé USB insérée !
+label_tft_usb_removed:Clé USB retirée !
+label_tft_usb_not_detected:Aucune clé USB détectée.
+label_onboard_sd:SD interne
+label_onboard_usb:USB interne
+label_onboard_sd_read_error:Erreur de lecture de la media interne !
 label_filament_runout:Fin de Filament !
 label_disable_steppers:Moteurs
 label_xy_unlock:Moteurs XY
@@ -167,6 +168,8 @@ label_test:Tester
 label_deploy:Déployer
 label_stow:Rentrer
 label_repeat:Répéter
+label_hs_on:HS: On
+label_hs_off:HS: Off
 label_nozzle:Buse
 label_bed:Plateau
 label_chamber:Caisson
