--- a/Copy to SD Card root directory to update/Language Packs/language_it.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_it.ini
@@ -1,5 +1,5 @@
 #### Language Code:IT
-## Language Version:20220222
+## Language Version:20220321
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -58,6 +58,7 @@ label_hotend_offset:Offset secondo hotend
 label_stealth_chop:TMC StealthChop
 label_delta_configuration:Delta Configuration
 label_delta_tower_angle:Tower Angle Trim
+label_delta_diagonal_rod:Diagonal Rod Trim
 label_delta_endstop:Endstop Adjustments
 label_probe_offset:Probe offset
 label_lin_advance:Linear advance
@@ -143,19 +144,19 @@ label_power_failed:Vuoi continuare la stampa?
 label_process_running:Processo in corso! Attendere il completamento
 label_process_completed:Processo completato!
 label_process_aborted:Processo annullato!
-label_tftsd:SD card
-label_read_tftsd_error:Errore lettura SD card!
-label_tftsd_inserted:SD card inserita
-label_tftsd_removed:SD card rimossa
-label_tftsd_not_detected:SD card non rilevata!
-label_usb_disk:Pen drive
-label_read_usb_disk_error:Errore lettura pen drive!
-label_usb_disk_inserted:Pen drive inserita
-label_usb_disk_removed:Pen drive rimossa
-label_usb_disk_not_detected:Pen drive non rilevata!
-label_onboardsd:SD scheda
-label_onboardusb:USB scheda
-label_read_onboardsd_error:Errore lettura media su scheda!
+label_tft_sd:SD card
+label_tft_sd_read_error:Errore lettura SD card!
+label_tft_sd_inserted:SD card inserita
+label_tft_sd_removed:SD card rimossa
+label_tft_sd_not_detected:SD card non rilevata!
+label_tft_usb:Pen drive
+label_tft_usb_read_error:Errore lettura pen drive!
+label_tft_usb_inserted:Pen drive inserita
+label_tft_usb_removed:Pen drive rimossa
+label_tft_usb_not_detected:Pen drive non rilevata!
+label_onboard_sd:SD scheda
+label_onboard_usb:USB scheda
+label_onboard_sd_read_error:Errore lettura media su scheda!
 label_filament_runout:Filamento finito!
 label_disable_steppers:Motori
 label_xy_unlock:Sblocca XY
@@ -167,6 +168,8 @@ label_test:Test
 label_deploy:Estrai
 label_stow:Ritrai
 label_repeat:Ripeti
+label_hs_on:HS: On
+label_hs_off:HS: Off
 label_nozzle:Hotend
 label_bed:Piatto ris.
 label_chamber:Camera
