--- a/Copy to SD Card root directory to update/Language Packs/language_pl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_pl.ini
@@ -1,5 +1,5 @@
 #### Language Code:PL
-## Language Version:20220222
+## Language Version:20220321
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -58,6 +58,7 @@ label_hotend_offset:Przesunięcie 2. dyszy
 label_stealth_chop:TMC StealthChop
 label_delta_configuration:Konfiguracja delta
 label_delta_tower_angle:Trymowanie kąta wieży
+label_delta_diagonal_rod:Diagonal Rod Trim
 label_delta_endstop:Regulacje krańców
 label_probe_offset:Przesunięcie sondy
 label_lin_advance:Linear Advance
@@ -143,19 +144,19 @@ label_power_failed:Kontynuować drukowanie?
 label_process_running:Przetwarzanie uruchomione!
 label_process_completed:Zakończono przetwarzanie!
 label_process_aborted:Przerwano przetwarzanie!
-label_tftsd:SD TFT
-label_read_tftsd_error:Błąd odczytu karty SD wyświetlacza!
-label_tftsd_inserted:Karta włożona!
-label_tftsd_removed:Karta wyjęta!
-label_tftsd_not_detected:No SD Card detected.
-label_usb_disk:USB TFT
-label_read_usb_disk_error:Błąd odczytu dysku USB!
-label_usb_disk_inserted:Dysk USB włożony!
-label_usb_disk_removed:Dysk USB wyjęty!
-label_usb_disk_not_detected:No USB Disk detected.
-label_onboardsd:OnboardSD
-label_onboardusb:OnboardUSB
-label_read_onboardsd_error:Błąd odczytu karta!
+label_tft_sd:SD TFT
+label_tft_sd_read_error:Błąd odczytu karty SD wyświetlacza!
+label_tft_sd_inserted:Karta włożona!
+label_tft_sd_removed:Karta wyjęta!
+label_tft_sd_not_detected:No SD Card detected.
+label_tft_usb:USB TFT
+label_tft_usb_read_error:Błąd odczytu dysku USB!
+label_tft_usb_inserted:Dysk USB włożony!
+label_tft_usb_removed:Dysk USB wyjęty!
+label_tft_usb_not_detected:No USB Disk detected.
+label_onboard_sd:OnboardSD
+label_onboard_usb:OnboardUSB
+label_onboard_sd_read_error:Błąd odczytu karta!
 label_filament_runout:Skończył się filament!
 label_disable_steppers:Odbl.wsz.
 label_xy_unlock:Odbl. XY
@@ -167,6 +168,8 @@ label_test:Testuj
 label_deploy:Rozlokuj
 label_stow:Schowaj
 label_repeat:Powtórz
+label_hs_on:HS: On
+label_hs_off:HS: Off
 label_nozzle:Dysza
 label_bed:Stół
 label_chamber:Komora
