--- a/Copy to SD Card root directory to update/Language Packs/language_pt.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_pt.ini
@@ -1,5 +1,5 @@
 #### Language Code:PT
-## Language Version:20220222
+## Language Version:20220321
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -58,6 +58,7 @@ label_hotend_offset:Offset 2nd Nozzle
 label_stealth_chop:TMC StealthChop
 label_delta_configuration:Delta Configuration
 label_delta_tower_angle:Tower Angle Trim
+label_delta_diagonal_rod:Diagonal Rod Trim
 label_delta_endstop:Endstop Adjustments
 label_probe_offset:Probe Offset
 label_lin_advance:Linear Advance
@@ -143,19 +144,19 @@ label_power_failed:Continuar a imprimir?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tftsd:TFT SD
-label_read_tftsd_error:Erro a ler TFT SD!
-label_tftsd_inserted:Cartao inserido!
-label_tftsd_removed:Cartao removido!
-label_tftsd_not_detected:No SD Card detected.
-label_usb_disk:U Disk
-label_read_usb_disk_error:Erro a ler U Disk!
-label_usb_disk_inserted:U Disk inserido!
-label_usb_disk_removed:U Disk removido!
-label_usb_disk_not_detected:No USB Disk detected.
-label_onboardsd:OnboardSD
-label_onboardusb:OnboardUSB
-label_read_onboardsd_error:Erro a ler Onboard media!
+label_tft_sd:TFT SD
+label_tft_sd_read_error:Erro a ler TFT SD!
+label_tft_sd_inserted:Cartao inserido!
+label_tft_sd_removed:Cartao removido!
+label_tft_sd_not_detected:No SD Card detected.
+label_tft_usb:U Disk
+label_tft_usb_read_error:Erro a ler U Disk!
+label_tft_usb_inserted:U Disk inserido!
+label_tft_usb_removed:U Disk removido!
+label_tft_usb_not_detected:No USB Disk detected.
+label_onboard_sd:OnboardSD
+label_onboard_usb:OnboardUSB
+label_onboard_sd_read_error:Erro a ler Onboard media!
 label_filament_runout:Filamento runout!
 label_disable_steppers:Disarm All
 label_xy_unlock:Desbloquear XY
@@ -167,6 +168,8 @@ label_test:Testar
 label_deploy:Abrir
 label_stow:Encolher
 label_repeat:Repetir
+label_hs_on:HS: On
+label_hs_off:HS: Off
 label_nozzle:Nozzle
 label_bed:Hotbed
 label_chamber:Chamber
