--- a/Copy to SD Card root directory to update/Language Packs/language_ru.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_ru.ini
@@ -1,5 +1,5 @@
 #### Language Code:RU
-## Language Version:20220222
+## Language Version:20220321
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -58,6 +58,7 @@ label_hotend_offset:Смещение 2-го сопла
 label_stealth_chop:TMC StealthChop
 label_delta_configuration:Delta Configuration
 label_delta_tower_angle:Tower Angle Trim
+label_delta_diagonal_rod:Diagonal Rod Trim
 label_delta_endstop:Endstop Adjustments
 label_probe_offset:Смещение датчика
 label_lin_advance:К-фактор
@@ -143,19 +144,19 @@ label_power_failed:Продолжить печать?
 label_process_running:Идёт процесс!
 label_process_completed:Процесс завершён!
 label_process_aborted:Процесс прерван!
-label_tftsd:SD экрана
-label_read_tftsd_error:Ошибка чтения SD карты!
-label_tftsd_inserted:SD карта вставлена!
-label_tftsd_removed:SD карта извлечена!
-label_tftsd_not_detected:No SD Card detected.
-label_usb_disk:Флеш карта
-label_read_usb_disk_error:Ошибка чтения флеш карты!
-label_usb_disk_inserted:Флеш карта вставлена!
-label_usb_disk_removed:Флеш карта извлечена!
-label_usb_disk_not_detected:No USB Disk detected.
-label_onboardsd:SD платы
-label_onboardusb:USB платы
-label_read_onboardsd_error:Ошибка чтения SD карты!
+label_tft_sd:SD экрана
+label_tft_sd_read_error:Ошибка чтения SD карты!
+label_tft_sd_inserted:SD карта вставлена!
+label_tft_sd_removed:SD карта извлечена!
+label_tft_sd_not_detected:No SD Card detected.
+label_tft_usb:Флеш карта
+label_tft_usb_read_error:Ошибка чтения флеш карты!
+label_tft_usb_inserted:Флеш карта вставлена!
+label_tft_usb_removed:Флеш карта извлечена!
+label_tft_usb_not_detected:No USB Disk detected.
+label_onboard_sd:SD платы
+label_onboard_usb:USB платы
+label_onboard_sd_read_error:Ошибка чтения SD карты!
 label_filament_runout:Пруток закончился
 label_disable_steppers:Двигатели
 label_xy_unlock:Моторы выкл
@@ -167,6 +168,8 @@ label_test:BLT тест
 label_deploy:BLT вниз
 label_stow:BLT вверх
 label_repeat:Точность Z
+label_hs_on:HS: On
+label_hs_off:HS: Off
 label_nozzle:Сопло
 label_bed:Стол
 label_chamber:Камера
