--- a/Copy to SD Card root directory to update/Language Packs/language_sl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_sl.ini
@@ -1,5 +1,5 @@
 #### Language Code:SL
-## Language Version:20220222
+## Language Version:20220321
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -58,6 +58,7 @@ label_hotend_offset:Offset 2nd Nozzle
 label_stealth_chop:TMC StealthChop
 label_delta_configuration:Delta Configuration
 label_delta_tower_angle:Tower Angle Trim
+label_delta_diagonal_rod:Diagonal Rod Trim
 label_delta_endstop:Endstop Adjustments
 label_probe_offset:Odmik sonde
 label_lin_advance:Linear Advance
@@ -143,19 +144,19 @@ label_power_failed:Nadaljuj s tiskanjem?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tftsd:TFT SD
-label_read_tftsd_error:Napaka branja TFT SD kartice!
-label_tftsd_inserted:Kartica vstavljena!
-label_tftsd_removed:Kartica odstranjena!
-label_tftsd_not_detected:No SD Card detected.
-label_usb_disk:USB disk
-label_read_usb_disk_error:Napaka branja USB diska!
-label_usb_disk_inserted:USB disk vstavljen!
-label_usb_disk_removed:USB disk odstranjen!
-label_usb_disk_not_detected:No USB Disk detected.
-label_onboardsd:SKR SD
-label_onboardusb:SKR USB
-label_read_onboardsd_error:Napaka branja SKR media!
+label_tft_sd:TFT SD
+label_tft_sd_read_error:Napaka branja TFT SD kartice!
+label_tft_sd_inserted:Kartica vstavljena!
+label_tft_sd_removed:Kartica odstranjena!
+label_tft_sd_not_detected:No SD Card detected.
+label_tft_usb:USB disk
+label_tft_usb_read_error:Napaka branja USB diska!
+label_tft_usb_inserted:USB disk vstavljen!
+label_tft_usb_removed:USB disk odstranjen!
+label_tft_usb_not_detected:No USB Disk detected.
+label_onboard_sd:SKR SD
+label_onboard_usb:SKR USB
+label_onboard_sd_read_error:Napaka branja SKR media!
 label_filament_runout:Ni več filamenta!
 label_disable_steppers:Disarm All
 label_xy_unlock:Disarm XY
@@ -167,6 +168,8 @@ label_test:Test
 label_deploy:Postavi
 label_stow:Skrij
 label_repeat:Ponovi
+label_hs_on:HS: On
+label_hs_off:HS: Off
 label_nozzle:Šoba
 label_bed:Miza
 label_chamber:Chamber
