--- a/Copy to SD Card root directory to update/Language Packs/language_tr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_tr.ini
@@ -1,5 +1,5 @@
 #### Language Code:TR
-## Language Version:20220222
+## Language Version:20220321
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -58,6 +58,7 @@ label_hotend_offset:2. Nozül Mesafesi
 label_stealth_chop:TMC StealthChop
 label_delta_configuration:Delta Configuration
 label_delta_tower_angle:Tower Angle Trim
+label_delta_diagonal_rod:Diagonal Rod Trim
 label_delta_endstop:Endstop Adjustments
 label_probe_offset:Prob Offseti
 label_lin_advance:Linear Advance
@@ -143,19 +144,19 @@ label_power_failed:Baskı sürdürülsün mü?
 label_process_running:Proses zaten çalışıyor!
 label_process_completed:Proses tamamlandı!
 label_process_aborted:Proses durduruldu!
-label_tftsd:SD Kart
-label_read_tftsd_error:SD kart okunamadı!
-label_tftsd_inserted:SD Kart Takıldı!
-label_tftsd_removed:SD Kart Çıkarıldı!
-label_tftsd_not_detected:No SD Card detected.
-label_usb_disk:USB Disk
-label_read_usb_disk_error:USB disk okunamadı!
-label_usb_disk_inserted:USB Disk Takıldı!
-label_usb_disk_removed:USB Disk Çıkarıldı!
-label_usb_disk_not_detected:No USB Disk detected.
-label_onboardsd:Dahili SD
-label_onboardusb:Dahili USB
-label_read_onboardsd_error:Dahili SD Okunamadı!
+label_tft_sd:SD Kart
+label_tft_sd_read_error:SD kart okunamadı!
+label_tft_sd_inserted:SD Kart Takıldı!
+label_tft_sd_removed:SD Kart Çıkarıldı!
+label_tft_sd_not_detected:No SD Card detected.
+label_tft_usb:USB Disk
+label_tft_usb_read_error:USB disk okunamadı!
+label_tft_usb_inserted:USB Disk Takıldı!
+label_tft_usb_removed:USB Disk Çıkarıldı!
+label_tft_usb_not_detected:No USB Disk detected.
+label_onboard_sd:Dahili SD
+label_onboard_usb:Dahili USB
+label_onboard_sd_read_error:Dahili SD Okunamadı!
 label_filament_runout:Filaman Bitti!
 label_disable_steppers:Motor Dur.
 label_xy_unlock:XY Dur.
@@ -167,6 +168,8 @@ label_test:Test
 label_deploy:Aç
 label_stow:Kapat
 label_repeat:Tekrarla
+label_hs_on:HS: On
+label_hs_off:HS: Off
 label_nozzle:Nozül
 label_bed:Tabla
 label_chamber:Kabin
