--- a/Copy to SD Card root directory to update/Language Packs/language_uk.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_uk.ini
@@ -1,5 +1,5 @@
 #### Language Code:UK
-## Language Version:20220222
+## Language Version:20220321
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -58,6 +58,7 @@ label_hotend_offset:Зсув 2-го сопла
 label_stealth_chop:TMC StealthChop
 label_delta_configuration:Delta Configuration
 label_delta_tower_angle:Tower Angle Trim
+label_delta_diagonal_rod:Diagonal Rod Trim
 label_delta_endstop:Endstop Adjustments
 label_probe_offset:Зміщення датчика
 label_lin_advance:К-фактор
@@ -143,19 +144,19 @@ label_power_failed:Продовжити друк?
 label_process_running:Йде процес!
 label_process_completed:Процес завершений!
 label_process_aborted:Процес перерваний!
-label_tftsd:SD екрану
-label_read_tftsd_error:Не можу прочитати SD картку!
-label_tftsd_inserted:SD карта вставлена!
-label_tftsd_removed:SD карта витягнута!
-label_tftsd_not_detected:No SD Card detected.\nPlease insert an SD Card.
-label_usb_disk:Флеш карта
-label_read_usb_disk_error:Не можу прочитати флеш картку!
-label_usb_disk_inserted:Флеш карта вставлена!
-label_usb_disk_removed:Флеш карта витягнута!
-label_usb_disk_not_detected:No USB Disk detected.
-label_onboardsd:SD на платі
-label_onboardusb:USB на платі
-label_read_onboardsd_error:Не можу прочитати SD картку!
+label_tft_sd:SD екрану
+label_tft_sd_read_error:Не можу прочитати SD картку!
+label_tft_sd_inserted:SD карта вставлена!
+label_tft_sd_removed:SD карта витягнута!
+label_tft_sd_not_detected:No SD Card detected.\nPlease insert an SD Card.
+label_tft_usb:Флеш карта
+label_tft_usb_read_error:Не можу прочитати флеш картку!
+label_tft_usb_inserted:Флеш карта вставлена!
+label_tft_usb_removed:Флеш карта витягнута!
+label_tft_usb_not_detected:No USB Disk detected.
+label_onboard_sd:SD на платі
+label_onboard_usb:USB на платі
+label_onboard_sd_read_error:Не можу прочитати SD картку!
 label_filament_runout:Філамент закінчився
 label_disable_steppers:Вимкнути двигуни
 label_xy_unlock:Мотори вимкн
@@ -167,6 +168,8 @@ label_test:BLT тест
 label_deploy:BLT вниз
 label_stow:BLT вгору
 label_repeat:Точність Z
+label_hs_on:HS: On
+label_hs_off:HS: Off
 label_nozzle:Сопло
 label_bed:Стіл
 label_chamber:Камера
