--- a/Copy to SD Card - BTT/config.ini
+++ b/Copy to SD Card - BTT/config.ini
@@ -9,13 +9,18 @@
 # Supported TFT Variants
 #--------------------------------------------------------------------
 #
+# BIGTREE_TFT24_V1_1    / BIGTREE_TFT28_V1_0 / BIGTREE_TFT28_V3_0
 # BIGTREE_TFT35_V1_0    / BIGTREE_TFT35_V1_1 / BIGTREE_TFT35_V1_2
 # BIGTREE_TFT35_V2_0    / BIGTREE_TFT35_V3_0 / BIGTREE_TFT35_E3_V3_0
 # BIGTREE_TFT35_B1_V3_0 / BIGTREE_TFT43_V3_0 / BIGTREE_TFT50_V3_0
-# BIGTREE_TFT70_V3_0    / BIGTREE_TFT28_V1_0 / BIGTREE_TFT28_V3_0
-# BIGTREE_TFT24_V1_1    / MKS_TFT32_V1_3     / MKS_TFT32_V1_4
-# MKS_TFT28_V3_0        / MKS_TFT28_V4_0     / MKS_TFT28_NEW_GENIUS
-# MKS_TFT35_V1_0
+# BIGTREE_TFT70_V3_0
+#
+# BIGTREE_GD_TFT24_V1_1    / BIGTREE_GD_TFT35_V2_0    / BIGTREE_GD_TFT35_V3_0
+# BIGTREE_GD_TFT35_E3_V3_0 / BIGTREE_GD_TFT35_B1_V3_0 / BIGTREE_GD_TFT43_V3_0
+# BIGTREE_GD_TFT50_V3_0    / BIGTREE_GD_TFT70_V3_0
+#
+# MKS_TFT28_V3_0 / MKS_TFT28_V4_0 / MKS_TFT28_NEW_GENIUS
+# MKS_TFT32_V1_3 / MKS_TFT32_V1_4 / MKS_TFT35_V1_0
 #
 # Firmware source: https://github.com/bigtreetech/BIGTREETECH-TouchScreenFirmware
 
@@ -28,7 +33,7 @@
 # Distribution date: 2021-05-15
 # Firmware source: https://github.com/MarlinFirmware/Marlin/releases
 #
-# In order for the TFT's firmware to be able to provide all of its functionalities/features,
+# To use all the features and functionalities supported by the TFT,
 # the following options must be enabled in Marlin firmware.
 #
 # General options:
@@ -40,7 +45,7 @@
 #   M114_DETAIL (in Configuration_adv.h)
 #   REPORT_FAN_CHANGE (in Configuration_adv.h)
 #
-# Options to support printing from onboard SD:
+# Options to support printing from onboard media:
 #   SDSUPPORT (in Configuration.h)
 #   LONG_FILENAME_HOST_SUPPORT (in Configuration_adv.h)
 #   AUTO_REPORT_SD_STATUS (in Configuration_adv.h)
@@ -462,8 +467,8 @@ ext_speed:S60 N600 F1200
 #   Options: [disable: 0, enable: 1]
 auto_load_leveling:1
 
-#### Onboard / Printer SD Card Support
-# On Marlin firmware, the TFT will auto-detect Onboard SD Card.
+#### Onboard / Printer Media Support
+# On Marlin firmware, the TFT will auto-detect onboard media.
 # Auto-detect is not available for other firmwares like Smoothieware.
 #   Options: [disable: 0, enable: 1, auto-detect: 2]
 onboard_sd:2
