--- a/Copy to SD Card root directory to update/Language Packs/language_cz.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cz.ini
@@ -37,7 +37,7 @@ label_lcd_brightness:LCD jas
 label_lcd_idle_brightness:LCD snížení jasu
 label_lcd_idle_time:LCD snížení jasu po
 label_lcd_lock_on_idle:Blok. dotek při zatmavení
-label_led_always_on:LED always ON
+label_led_always_on:LED vždy zapnuto
 label_knob_led_color:Rotační knob LED
 label_knob_led_idle:Rotační knob LED idle
 label_start_gcode_enabled:Spustit Gcode před tiskem
@@ -58,7 +58,7 @@ label_hotend_offset:Offset 2.trysky
 label_stealth_chop:TMC Tichý režim
 label_delta_configuration:Delta konfigurace
 label_delta_tower_angle:Úhel věže
-label_delta_diagonal_rod:Diagonal Rod Trim
+label_delta_diagonal_rod:Diagonální tyč
 label_delta_endstop:Nastavení dorazu
 label_probe_offset:Offset sondy
 label_lin_advance:Linear Advance
