--- a/Copy to SD Card - MKS/config.ini
+++ b/Copy to SD Card - MKS/config.ini
@@ -29,14 +29,14 @@
 # Supported Marlin Firmware Versions
 #--------------------------------------------------------------------
 #
-# Minimum Marlin firmware version: 2.0.8.1
-# Distribution date: 2021-05-15
+# Minimum Marlin firmware version: 2.1.1
+# Distribution date: 2022-08-06
 # Firmware source: https://github.com/MarlinFirmware/Marlin/releases
 #
 # To use all the features and functionalities supported by the TFT,
 # the following options must be enabled in Marlin firmware.
 #
-# General options:
+# General options which MUST be always activated:
 #   EEPROM_SETTINGS (in Configuration.h)
 #   BABYSTEPPING (in Configuration_adv.h)
 #   AUTO_REPORT_TEMPERATURES (in Configuration_adv.h)
