--- a/Copy to SD Card root directory to update/Language Packs/language_am.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_am.ini
@@ -146,23 +146,23 @@ label_power_failed:Տպելը չի ավարտվել, շարունակե՞լ
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:TFT SD
-label_tft_sd_read_error:TFTSD հիշողության սարքը չկա
-label_tft_sd_inserted:Card inserted!
-label_tft_sd_removed:Card removed!
-label_tft_sd_not_detected:No SD Card detected.
-label_tft_usb:U Disk
-label_tft_usb_read_error:Read U Disk error!
-label_tft_usb_inserted:U Disk inserted!
-label_tft_usb_removed:U Disk removed!
-label_tft_usb_not_detected:No USB Disk detected.
-label_onboard_sd:OnboardSD
+label_tft_sd:SD card
+label_tft_sd_inserted:SD card inserted
+label_tft_sd_removed:SD card removed
+label_tft_sd_not_detected:No SD card detected!
+label_tft_sd_read_error:SD card հիշողության սարքը չկա
+label_tft_usb:USB stick
+label_tft_usb_inserted:USB stick inserted
+label_tft_usb_removed:USB stick removed
+label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_read_error:USB stick հիշողության սարքը չկա
+label_onboard_sd:Onboard SD
 label_onboard_usb:OnboardUSB
-label_onboard_sd_read_error:OnboardSD հիշողության սարքը չկա
+label_onboard_sd_read_error:Onboard SD հիշողության սարքը չկա
 label_filament_runout:Filament runout!
 label_disable_steppers:Disarm All
 label_xy_unlock:Disarm XY
-label_start_print:Start Printing:\n%s?
+label_start_print:Start printing:\n%s?
 label_stop_print:Stop printing?
 label_is_pause:Unable to extrude when printing.\nPause printing?
 label_m0_pause:Paused by M0 command
