--- a/Copy to SD Card root directory to update/Language Packs/language_ca.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_ca.ini
@@ -146,18 +146,18 @@ label_power_failed:¿Continuar imprimint?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:SD TFT
-label_tft_sd_read_error:Error a la targeta SD TFT!
-label_tft_sd_inserted:¡Targeta inserida!
-label_tft_sd_removed:¡Targeta extreta!
-label_tft_sd_not_detected:No SD Card detected.
+label_tft_sd:SD card
+label_tft_sd_inserted:¡Targeta inserida
+label_tft_sd_removed:¡Targeta extreta
+label_tft_sd_not_detected:No SD card detected!
+label_tft_sd_read_error:Error a la targeta SD!
 label_tft_usb:Pendrive
-label_tft_usb_read_error:¡Error al Pendrive!
-label_tft_usb_inserted:¡Pendrive inserit!
-label_tft_usb_removed:¡Pendrive extret!
-label_tft_usb_not_detected:No USB Disk detected.
-label_onboard_sd:SD Placa
-label_onboard_usb:USB Placa
+label_tft_usb_inserted:¡Pendrive inserit
+label_tft_usb_removed:¡Pendrive extret
+label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_read_error:¡Error al pendrive!
+label_onboard_sd:SD placa
+label_onboard_usb:USB placa
 label_onboard_sd_read_error:Error a la targeta SD de la placa!
 label_filament_runout:¡Filament esgotat!
 label_disable_steppers:Disarm All
