--- a/Copy to SD Card root directory to update/Language Packs/language_es.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_es.ini
@@ -146,23 +146,23 @@ label_power_failed:¿Continuar imprimiendo?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:SD TFT
-label_tft_sd_read_error:¡Error en la tarjeta SD TFT!
-label_tft_sd_inserted:¡Tarjeta insertada!
-label_tft_sd_removed:¡Tarjeta extraida!
-label_tft_sd_not_detected:No SD Card detected.
+label_tft_sd:SD card
+label_tft_sd_inserted:¡Tarjeta insertada
+label_tft_sd_removed:¡Tarjeta extraida
+label_tft_sd_not_detected:No SD card detected!
+label_tft_sd_read_error:¡Error en la tarjeta SD!
 label_tft_usb:Pendrive
-label_tft_usb_read_error:¡Error en el Pendrive!
-label_tft_usb_inserted:¡Pendrive insertado!
-label_tft_usb_removed:¡Pendrive extraido!
-label_tft_usb_not_detected:No USB Disk detected.
-label_onboard_sd:SD Placa
-label_onboard_usb:USB Placa
+label_tft_usb_inserted:¡Pendrive insertado
+label_tft_usb_removed:¡Pendrive extraido
+label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_read_error:¡Error en el pendrive!
+label_onboard_sd:SD placa
+label_onboard_usb:USB placa
 label_onboard_sd_read_error:¡Error en la tarjeta media de la placa!
 label_filament_runout:¡Filamento agotado!
 label_disable_steppers:Disarm All
 label_xy_unlock:Desbloquear XY
-label_start_print:Start Printing:\n%s?
+label_start_print:Start printing:\n%s?
 label_stop_print:¿Desea parar la impresión?
 label_is_pause:No se puede extruir al imprimir,¿\nPausar la impresión?
 label_m0_pause:Paused by M0 command
