--- a/Copy to SD Card root directory to update/Language Packs/language_gr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_gr.ini
@@ -146,23 +146,23 @@ label_power_failed:Συνέχεια εκτύπωσης;
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:TFT SD
+label_tft_sd:SD card
+label_tft_sd_inserted:Η κάρτα έχει εισαχθεί
+label_tft_sd_removed:Η κάρτα αφαιρέθηκε
+label_tft_sd_not_detected:No SD card detected!
 label_tft_sd_read_error:Σφάλμα ανάγνωσης κάρτας SD οθόνης!
-label_tft_sd_inserted:Η κάρτα έχει εισαχθεί!
-label_tft_sd_removed:Η κάρτα αφαιρέθηκε!
-label_tft_sd_not_detected:No SD Card detected.
 label_tft_usb:USB Δίσκος
+label_tft_usb_inserted:Ο USB Δίσκος έχει εισαχθεί
+label_tft_usb_removed:Ο USB Δίσκος αφαιρέθηκε
+label_tft_usb_not_detected:No USB stick detected!
 label_tft_usb_read_error:Σφάλμα ανάγνωσης USB Δίσκου!
-label_tft_usb_inserted:Ο USB Δίσκος έχει εισαχθεί!
-label_tft_usb_removed:Ο USB Δίσκος αφαιρέθηκε!
-label_tft_usb_not_detected:No USB Disk detected.
 label_onboard_sd:Ενσωματωμένη κάρτα SD
 label_onboard_usb:Ενσωματωμένη κάρτα USB
 label_onboard_sd_read_error:Σφάλμα ανάγνωσης ενσωματωμένης κάρτας SD!
 label_filament_runout:τελείωσε το νημά!
 label_disable_steppers:Disarm All
 label_xy_unlock:Disarm XY
-label_start_print:Start Printing:\n%s?
+label_start_print:Start printing:\n%s?
 label_stop_print:Διακοπή εκτύπωσης?
 label_is_pause:Δεν είναι δυνατή η εξώθηση κατα τη δυάρκεια εκτύπωσης.\nΠαύση εκτύπωσης?
 label_m0_pause:Διακόπηκε λόγω M0 εντολής
