--- a/Copy to SD Card root directory to update/Language Packs/language_hu.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_hu.ini
@@ -146,16 +146,16 @@ label_power_failed:Folytatod a nyomtatást?
 label_process_running:Folyamat fut!
 label_process_completed:Folyamat befejezve!
 label_process_aborted:Folyamat megszakítva!
-label_tft_sd:TFT-SD
-label_tft_sd_read_error:TFT-SD olvasási hiba!
-label_tft_sd_inserted:SD-Kártya behelyezve!
-label_tft_sd_removed:SD-Kártya eltávolítva!
-label_tft_sd_not_detected:Nem észlelhető SD-Kártya.
+label_tft_sd:SD-Kártya
+label_tft_sd_inserted:SD-Kártya behelyezve
+label_tft_sd_removed:SD-Kártya eltávolítva
+label_tft_sd_not_detected:Nem észlelhető SD-Kártya!
+label_tft_sd_read_error:SD-Kártya olvasási hiba!
 label_tft_usb:USB Tár
+label_tft_usb_inserted:USB behelyezve
+label_tft_usb_removed:USB eltávolítva
+label_tft_usb_not_detected:Nem észlelhető USB-lemez!
 label_tft_usb_read_error:USB olvasási hiba!
-label_tft_usb_inserted:USB behelyezve!
-label_tft_usb_removed:USB eltávolítva!
-label_tft_usb_not_detected:Nem észlelhető USB-lemez.
 label_onboard_sd:Lap-SD
 label_onboard_usb:Lap-USB
 label_onboard_sd_read_error:Alaplap média olvasási hiba!
