--- a/Copy to SD Card root directory to update/Language Packs/language_nl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_nl.ini
@@ -146,17 +146,17 @@ label_power_failed:Verder met printen?
 label_process_running:Process bezig!
 label_process_completed:Process voltooid!
 label_process_aborted:Process geannuleerd!
-label_tft_sd:TFT SD
-label_tft_sd_read_error:TFT SD leesfout!
-label_tft_sd_inserted:Kaart geplaatst!
-label_tft_sd_removed:Kaart verwijdert!
-label_tft_sd_not_detected:No SD Card detected.
-label_tft_usb:U Disk
-label_tft_usb_read_error:U Disk Leesfout!
-label_tft_usb_inserted:U Disk geplaatst!
-label_tft_usb_removed:U Disk verwijdert!
-label_tft_usb_not_detected:No USB Disk detected.
-label_onboard_sd:OnboardSD
+label_tft_sd:SD card
+label_tft_sd_inserted:Kaart geplaatst
+label_tft_sd_removed:Kaart verwijdert
+label_tft_sd_not_detected:No SD card detected!
+label_tft_sd_read_error:SD card leesfout!
+label_tft_usb:USB stick
+label_tft_usb_inserted:USB stick geplaatst
+label_tft_usb_removed:USB stick verwijdert
+label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_read_error:USB stick leesfout!
+label_onboard_sd:Onboard SD
 label_onboard_usb:OnboardUSB
 label_onboard_sd_read_error:Onboard media leesfout!
 label_filament_runout:filament op!
