--- a/Copy to SD Card root directory to update/Language Packs/language_pl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_pl.ini
@@ -146,17 +146,17 @@ label_power_failed:Kontynuować drukowanie?
 label_process_running:Przetwarzanie uruchomione!
 label_process_completed:Zakończono przetwarzanie!
 label_process_aborted:Przerwano przetwarzanie!
-label_tft_sd:SD TFT
+label_tft_sd:Karty SD
+label_tft_sd_inserted:Karta włożona
+label_tft_sd_removed:Karta wyjęta
+label_tft_sd_not_detected:No SD card detected!
 label_tft_sd_read_error:Błąd odczytu karty SD wyświetlacza!
-label_tft_sd_inserted:Karta włożona!
-label_tft_sd_removed:Karta wyjęta!
-label_tft_sd_not_detected:No SD Card detected.
-label_tft_usb:USB TFT
+label_tft_usb:Dysk USB
+label_tft_usb_inserted:Dysk USB włożony
+label_tft_usb_removed:Dysk USB wyjęty
+label_tft_usb_not_detected:No USB stick detected!
 label_tft_usb_read_error:Błąd odczytu dysku USB!
-label_tft_usb_inserted:Dysk USB włożony!
-label_tft_usb_removed:Dysk USB wyjęty!
-label_tft_usb_not_detected:No USB Disk detected.
-label_onboard_sd:OnboardSD
+label_onboard_sd:Onboard SD
 label_onboard_usb:OnboardUSB
 label_onboard_sd_read_error:Błąd odczytu karta!
 label_filament_runout:Skończył się filament!
