--- a/Copy to SD Card root directory to update/Language Packs/language_pt.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_pt.ini
@@ -146,23 +146,23 @@ label_power_failed:Continuar a imprimir?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:TFT SD
-label_tft_sd_read_error:Erro a ler TFT SD!
-label_tft_sd_inserted:Cartao inserido!
-label_tft_sd_removed:Cartao removido!
-label_tft_sd_not_detected:No SD Card detected.
-label_tft_usb:U Disk
-label_tft_usb_read_error:Erro a ler U Disk!
-label_tft_usb_inserted:U Disk inserido!
-label_tft_usb_removed:U Disk removido!
-label_tft_usb_not_detected:No USB Disk detected.
-label_onboard_sd:OnboardSD
+label_tft_sd:SD card
+label_tft_sd_inserted:Cartao inserido
+label_tft_sd_removed:Cartao removido
+label_tft_sd_not_detected:No SD card detected!
+label_tft_sd_read_error:Erro a ler SD card!
+label_tft_usb:USB stick
+label_tft_usb_inserted:USB stick inserido
+label_tft_usb_removed:USB stick removido
+label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_read_error:Erro a ler USB stick!
+label_onboard_sd:Onboard SD
 label_onboard_usb:OnboardUSB
-label_onboard_sd_read_error:Erro a ler Onboard media!
+label_onboard_sd_read_error:Erro a ler onboard media!
 label_filament_runout:Filamento runout!
 label_disable_steppers:Disarm All
 label_xy_unlock:Desbloquear XY
-label_start_print:Start Printing:\n%s?
+label_start_print:Start printing:\n%s?
 label_stop_print:Parar de imprimir?
 label_is_pause:Nao e possível a extrusão durante a impressao,\npausar a impressao?
 label_m0_pause:Paused by M0 command
