--- a/Copy to SD Card root directory to update/Language Packs/language_sk.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_sk.ini
@@ -146,23 +146,23 @@ label_power_failed:Pokračovať v tlači?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:TFT SD
+label_tft_sd:SD karta
+label_tft_sd_inserted:SD karta vložená
+label_tft_sd_removed:SD karta odstránená
+label_tft_sd_not_detected:No SD card detected!
 label_tft_sd_read_error:Chyba pri načítaní SD karty!
-label_tft_sd_inserted:SD karta vložená!
-label_tft_sd_removed:SD karta odstránená!
-label_tft_sd_not_detected:No SD Card detected.
 label_tft_usb:USB kľúč
+label_tft_usb_inserted:USB kľúč vložený
+label_tft_usb_removed:USB kľúč odstránený
+label_tft_usb_not_detected:No USB stick detected!
 label_tft_usb_read_error:Chyba pri načítaní USB kľúča!
-label_tft_usb_inserted:USB kľúč vložený!
-label_tft_usb_removed:USB disk odstránený!
-label_tft_usb_not_detected:No USB Disk detected.
 label_onboard_sd:SD karta na doske
 label_onboard_usb:USB na doske
 label_onboard_sd_read_error:Chyba pri načítaní media na doske!
 label_filament_runout:Chýba filament!
 label_disable_steppers:Disarm All
 label_xy_unlock:Odomknite XY
-label_start_print:Start Printing:\n%s?
+label_start_print:Start printing:\n%s?
 label_stop_print:Zastaviť tlač?
 label_is_pause:Nemožno extrudovať počas tlače,\npozastaviť tlač?
 label_m0_pause:Pauza príkazom M0
