--- a/Copy to SD Card root directory to update/Language Packs/language_tc.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_tc.ini
@@ -147,15 +147,15 @@ label_process_running:正在運行,請稍後
 label_process_completed:處理已完成!
 label_process_aborted:處理已被中斷!
 label_tft_sd:SD卡
-label_tft_sd_read_error:SD卡讀取失敗
 label_tft_sd_inserted:偵測到SD卡
 label_tft_sd_removed:SD卡已拔出
-label_tft_sd_not_detected:No SD Card detected.
+label_tft_sd_not_detected:No SD card detected!
+label_tft_sd_read_error:SD卡讀取失敗
 label_tft_usb:隨身碟
-label_tft_usb_read_error:隨身碟讀取失敗
 label_tft_usb_inserted:偵測到隨身碟
 label_tft_usb_removed:隨身碟已拔出
-label_tft_usb_not_detected:No USB Disk detected.
+label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_read_error:隨身碟讀取失敗
 label_onboard_sd:主機板插槽的SD卡
 label_onboard_usb:主機板插槽的USB
 label_onboard_sd_read_error:主機板的存儲介質讀取失敗
