--- a/Copy to SD Card root directory to update/Language Packs/language_tr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_tr.ini
@@ -147,15 +147,15 @@ label_process_running:Proses zaten çalışıyor!
 label_process_completed:Proses tamamlandı!
 label_process_aborted:Proses durduruldu!
 label_tft_sd:SD Kart
+label_tft_sd_inserted:SD Kart Takıldı
+label_tft_sd_removed:SD Kart Çıkarıldı
+label_tft_sd_not_detected:No SD card detected!
 label_tft_sd_read_error:SD kart okunamadı!
-label_tft_sd_inserted:SD Kart Takıldı!
-label_tft_sd_removed:SD Kart Çıkarıldı!
-label_tft_sd_not_detected:No SD Card detected.
 label_tft_usb:USB Disk
-label_tft_usb_read_error:USB disk okunamadı!
-label_tft_usb_inserted:USB Disk Takıldı!
-label_tft_usb_removed:USB Disk Çıkarıldı!
-label_tft_usb_not_detected:No USB Disk detected.
+label_tft_usb_inserted:USB Disk Takıldı
+label_tft_usb_removed:USB Disk Çıkarıldı
+label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_read_error:USB Disk okunamadı!
 label_onboard_sd:Dahili SD
 label_onboard_usb:Dahili USB
 label_onboard_sd_read_error:Dahili SD Okunamadı!
