--- a/Copy to SD Card root directory to update/Language Packs/language_uk.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_uk.ini
@@ -147,15 +147,15 @@ label_process_running:Йде процес!
 label_process_completed:Процес завершений!
 label_process_aborted:Процес перерваний!
 label_tft_sd:SD екрану
+label_tft_sd_inserted:SD карта вставлена
+label_tft_sd_removed:SD карта витягнута
+label_tft_sd_not_detected:No SD card detected!
 label_tft_sd_read_error:Не можу прочитати SD картку!
-label_tft_sd_inserted:SD карта вставлена!
-label_tft_sd_removed:SD карта витягнута!
-label_tft_sd_not_detected:No SD Card detected.\nPlease insert an SD Card.
 label_tft_usb:Флеш карта
+label_tft_usb_inserted:Флеш карта вставлена
+label_tft_usb_removed:Флеш карта витягнута
+label_tft_usb_not_detected:No USB stick detected!
 label_tft_usb_read_error:Не можу прочитати флеш картку!
-label_tft_usb_inserted:Флеш карта вставлена!
-label_tft_usb_removed:Флеш карта витягнута!
-label_tft_usb_not_detected:No USB Disk detected.
 label_onboard_sd:SD на платі
 label_onboard_usb:USB на платі
 label_onboard_sd_read_error:Не можу прочитати SD картку!
