--- a/Copy to SD Card root directory to update/Language Packs/language_cn.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cn.ini
@@ -146,16 +146,16 @@ label_power_failed:是否继续打印?
 label_process_running:正在运行,请稍后
 label_process_completed:处理已完成!
 label_process_aborted:处理已被中断!
-label_tft_sd:TFT SD
-label_tft_sd_read_error:读TFT SD卡出错!
-label_tft_sd_inserted:SD卡已插入!
-label_tft_sd_removed:SD卡已拔出!
-label_tft_sd_not_detected:No SD Card detected.
-label_tft_usb:U盘
-label_tft_usb_read_error:读U盘出错!
-label_tft_usb_inserted:U盘已插入!
-label_tft_usb_removed:U盘已拔出!
-label_tft_usb_not_detected:No USB Disk detected.
+label_tft_sd:SD卡
+label_tft_sd_inserted:SD卡已插入
+label_tft_sd_removed:SD卡已拔出
+label_tft_sd_not_detected:No SD card detected!
+label_tft_sd_read_error:读SD卡出错!
+label_tft_usb:USB盘
+label_tft_usb_inserted:USB盘已插入
+label_tft_usb_removed:USB盘已拔出
+label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_read_error:读USB盘出错!
 label_onboard_sd:板载SD
 label_onboard_usb:板载USB
 label_onboard_sd_read_error:主機板的存儲介質讀取失敗!
