--- a/Copy to SD Card root directory to update/Language Packs/language_jp.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_jp.ini
@@ -146,16 +146,16 @@ label_power_failed:プリントを継続しますか?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:TFT SD
-label_tft_sd_read_error:TFT SDカードの読み取りがエラー発生しました!
-label_tft_sd_inserted:SDカード入りました!
-label_tft_sd_removed:SDカード出しました!
-label_tft_sd_not_detected:No SD Card detected.
+label_tft_sd:SDカード
+label_tft_sd_inserted:SDカード入りました
+label_tft_sd_removed:SDカード出しました
+label_tft_sd_not_detected:No SD card detected!
+label_tft_sd_read_error:SDカードの読み取りがエラー発生しました!
 label_tft_usb:USBメモリー
+label_tft_usb_inserted:USBカード入りました
+label_tft_usb_removed:USBカード出しました
+label_tft_usb_not_detected:No USB stick detected!
 label_tft_usb_read_error:USBメモリー読み込みエラー!
-label_tft_usb_inserted:U Diskカード入りました!
-label_tft_usb_removed:U Diskカード出しました!
-label_tft_usb_not_detected:No USB Disk detected.
 label_onboard_sd:内部 mSDカード
 label_onboard_usb:OnboardUSB
 label_onboard_sd_read_error:内部 mSDカードの読み取りがエラー発生しました!
