--- a/Copy to SD Card root directory to update/Language Packs/language_ru.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_ru.ini
@@ -147,15 +147,15 @@ label_process_running:Идёт процесс!
 label_process_completed:Процесс завершён!
 label_process_aborted:Процесс прерван!
 label_tft_sd:SD экрана
+label_tft_sd_inserted:SD карта вставлена
+label_tft_sd_removed:SD карта извлечена
+label_tft_sd_not_detected:No SD card detected!
 label_tft_sd_read_error:Ошибка чтения SD карты!
-label_tft_sd_inserted:SD карта вставлена!
-label_tft_sd_removed:SD карта извлечена!
-label_tft_sd_not_detected:No SD Card detected.
 label_tft_usb:Флеш карта
+label_tft_usb_inserted:Флеш карта вставлена
+label_tft_usb_removed:Флеш карта извлечена
+label_tft_usb_not_detected:No USB stick detected!
 label_tft_usb_read_error:Ошибка чтения флеш карты!
-label_tft_usb_inserted:Флеш карта вставлена!
-label_tft_usb_removed:Флеш карта извлечена!
-label_tft_usb_not_detected:No USB Disk detected.
 label_onboard_sd:SD платы
 label_onboard_usb:USB платы
 label_onboard_sd_read_error:Ошибка чтения SD карты!
