--- a/Copy to SD Card root directory to update/Language Packs/language_sl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_sl.ini
@@ -146,16 +146,16 @@ label_power_failed:Nadaljuj s tiskanjem?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:TFT SD
-label_tft_sd_read_error:Napaka branja TFT SD kartice!
-label_tft_sd_inserted:Kartica vstavljena!
-label_tft_sd_removed:Kartica odstranjena!
-label_tft_sd_not_detected:No SD Card detected.
-label_tft_usb:USB disk
+label_tft_sd:SD kartica
+label_tft_sd_inserted:Kartica vstavljena
+label_tft_sd_removed:Kartica odstranjena
+label_tft_sd_not_detected:No SD card detected!
+label_tft_sd_read_error:Napaka branja SD kartica!
+label_tft_usb:USB diska
+label_tft_usb_inserted:USB diska vstavljen
+label_tft_usb_removed:USB diska odstranjen
+label_tft_usb_not_detected:No USB stick detected!
 label_tft_usb_read_error:Napaka branja USB diska!
-label_tft_usb_inserted:USB disk vstavljen!
-label_tft_usb_removed:USB disk odstranjen!
-label_tft_usb_not_detected:No USB Disk detected.
 label_onboard_sd:SKR SD
 label_onboard_usb:SKR USB
 label_onboard_sd_read_error:Napaka branja SKR media!
