--- a/Copy to SD Card root directory to update/Language Packs/language_am.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_am.ini
@@ -1,5 +1,5 @@
 #### Language Code:AM
-## Language Version:20221018
+## Language Version:20230112
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -158,7 +158,7 @@ label_tft_usb_not_detected:No USB stick detected!
 label_tft_usb_read_error:USB stick հիշողության սարքը չկա
 label_onboard_sd:Onboard SD
 label_onboard_usb:OnboardUSB
-label_onboard_sd_read_error:Onboard SD հիշողության սարքը չկա
+label_onboard_sd_read_error:Onboard հիշողության սարքը չկա
 label_filament_runout:Filament runout!
 label_disable_steppers:Disarm All
 label_xy_unlock:Disarm XY
