--- a/Copy to SD Card root directory to update/Language Packs/language_jp.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_jp.ini
@@ -1,5 +1,5 @@
 #### Language Code:JP
-## Language Version:20221018
+## Language Version:20230112
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -152,8 +152,8 @@ label_tft_sd_removed:SDカード出しました
 label_tft_sd_not_detected:No SD card detected!
 label_tft_sd_read_error:SDカードの読み取りがエラー発生しました!
 label_tft_usb:USBメモリー
-label_tft_usb_inserted:USBカード入りました
-label_tft_usb_removed:USBカード出しました
+label_tft_usb_inserted:USB diskカード入りました
+label_tft_usb_removed:USB diskカード出しました
 label_tft_usb_not_detected:No USB stick detected!
 label_tft_usb_read_error:USBメモリー読み込みエラー!
 label_onboard_sd:内部 mSDカード
