--- a/Copy to SD Card - MKS/Language Packs/language_cn.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_cn.ini
@@ -1,5 +1,5 @@
 #### Language Code:CN
-## Language Version:20221018
+## Language Version:20230112
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -146,16 +146,16 @@ label_power_failed:是否继续打印?
 label_process_running:正在运行,请稍后
 label_process_completed:处理已完成!
 label_process_aborted:处理已被中断!
-label_tft_sd:TFT SD
-label_tft_sd_read_error:读TFT SD卡出错!
-label_tft_sd_inserted:SD卡已插入!
-label_tft_sd_removed:SD卡已拔出!
-label_tft_sd_not_detected:No SD Card detected.
-label_tft_usb:U盘
-label_tft_usb_read_error:读U盘出错!
-label_tft_usb_inserted:U盘已插入!
-label_tft_usb_removed:U盘已拔出!
-label_tft_usb_not_detected:No USB Disk detected.
+label_tft_sd:SD卡
+label_tft_sd_inserted:SD卡已插入
+label_tft_sd_removed:SD卡已拔出
+label_tft_sd_not_detected:No SD card detected!
+label_tft_sd_read_error:读SD卡出错!
+label_tft_usb:USB盘
+label_tft_usb_inserted:USB盘已插入
+label_tft_usb_removed:USB盘已拔出
+label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_read_error:读USB盘出错!
 label_onboard_sd:板载SD
 label_onboard_usb:板载USB
 label_onboard_sd_read_error:主機板的存儲介質讀取失敗!
@@ -268,6 +268,7 @@ label_level_corner_info:Edge distance is below probe offset X/Y and some target 
 label_p_offset:P Offset
 label_h_offset:H Offset
 label_distance:距离
+label_shim:Shim
 label_load_unload:挤出/回抽耗材
 label_load_unload_short:进/退料
 label_touchscreen_adjust:触屏校准
@@ -296,7 +297,6 @@ label_unifiedmove:运动
 label_unifiedheat:温度
 label_touch_to_exit:触摸任意点退出当前界面
 label_mainmenu:菜单
-label_leveling_edge_distance:手动调平边沿距离
 label_tuning:调整
 label_mpc:MPC
 label_mpc_title:MPC自动整定
