--- a/Copy to SD Card - MKS/Language Packs/language_en.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_en.ini
@@ -1,5 +1,5 @@
 #### Language Code:EN
-## Language Version:20221018
+## Language Version:20230112
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -146,23 +146,23 @@ label_power_failed:Continue printing?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:TFT SD
-label_tft_sd_read_error:Read TFT SD card error!
-label_tft_sd_inserted:Card inserted!
-label_tft_sd_removed:Card removed!
-label_tft_sd_not_detected:No SD Card detected.
-label_tft_usb:USB Disk
-label_tft_usb_read_error:USB Disk read error!
-label_tft_usb_inserted:USB Disk inserted!
-label_tft_usb_removed:USB Disk removed!
-label_tft_usb_not_detected:No USB Disk detected.
-label_onboard_sd:OnboardSD
+label_tft_sd:SD card
+label_tft_sd_inserted:SD card inserted
+label_tft_sd_removed:SD card removed
+label_tft_sd_not_detected:No SD card detected!
+label_tft_sd_read_error:SD card reading error!
+label_tft_usb:USB stick
+label_tft_usb_inserted:USB stick inserted
+label_tft_usb_removed:USB stick removed
+label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_read_error:USB stick reading error!
+label_onboard_sd:Onboard SD
 label_onboard_usb:OnboardUSB
-label_onboard_sd_read_error:Read onboard media error!
+label_onboard_sd_read_error:Onboard media reading error!
 label_filament_runout:Filament runout!
 label_disable_steppers:Disarm All
 label_xy_unlock:Disarm XY
-label_start_print:Start Printing:\n%s?
+label_start_print:Start printing:\n%s?
 label_stop_print:Stop printing?
 label_is_pause:Action not allowed while printing.\n\nPause printing?
 label_m0_pause:Paused by M0 command
@@ -268,6 +268,7 @@ label_level_corner_info:Edge distance is below probe offset X/Y and some target 
 label_p_offset:P Offset
 label_h_offset:H Offset
 label_distance:Distance
+label_shim:Shim
 label_load_unload:Load/Unload
 label_load_unload_short:(Un)Load
 label_touchscreen_adjust:TSC Adjust
@@ -296,7 +297,6 @@ label_unifiedmove:Movement
 label_unifiedheat:Heat/Fan
 label_touch_to_exit:Touch anywhere to exit
 label_mainmenu:Menu
-label_leveling_edge_distance:Bed edge distance
 label_tuning:Tuning
 label_mpc:MPC
 label_mpc_title:MPC autotune
