--- a/Copy to SD Card - MKS/Language Packs/language_hu.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_hu.ini
@@ -1,5 +1,5 @@
 #### Language Code:HU
-## Language Version:20221018
+## Language Version:20230112
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -146,16 +146,16 @@ label_power_failed:Folytatod a nyomtatást?
 label_process_running:Folyamat fut!
 label_process_completed:Folyamat befejezve!
 label_process_aborted:Folyamat megszakítva!
-label_tft_sd:TFT-SD
-label_tft_sd_read_error:TFT-SD olvasási hiba!
-label_tft_sd_inserted:SD-Kártya behelyezve!
-label_tft_sd_removed:SD-Kártya eltávolítva!
-label_tft_sd_not_detected:Nem észlelhető SD-Kártya.
+label_tft_sd:SD-Kártya
+label_tft_sd_inserted:SD-Kártya behelyezve
+label_tft_sd_removed:SD-Kártya eltávolítva
+label_tft_sd_not_detected:Nem észlelhető SD-Kártya!
+label_tft_sd_read_error:SD-Kártya olvasási hiba!
 label_tft_usb:USB Tár
+label_tft_usb_inserted:USB behelyezve
+label_tft_usb_removed:USB eltávolítva
+label_tft_usb_not_detected:Nem észlelhető USB-lemez!
 label_tft_usb_read_error:USB olvasási hiba!
-label_tft_usb_inserted:USB behelyezve!
-label_tft_usb_removed:USB eltávolítva!
-label_tft_usb_not_detected:Nem észlelhető USB-lemez.
 label_onboard_sd:Lap-SD
 label_onboard_usb:Lap-USB
 label_onboard_sd_read_error:Alaplap média olvasási hiba!
@@ -268,6 +268,7 @@ label_level_corner_info:Az ágyszél távolsága a szonda X/Y eltolása alatt va
 label_p_offset:P Eltolás
 label_h_offset:H Eltolás
 label_distance:Távolság
+label_shim:Shim
 label_load_unload:Betöltés/Kiadás
 label_load_unload_short:Be/Ki
 label_touchscreen_adjust:Igazítás
@@ -296,7 +297,6 @@ label_unifiedmove:Mozgás
 label_unifiedheat:Fűt/Hűt
 label_touch_to_exit:Érintsd meg a kilépéshez.
 label_mainmenu:Főmenü
-label_leveling_edge_distance:Ágyszél távolság
 label_tuning:Hangolás
 label_mpc:MPC
 label_mpc_title:MPC önhangolás
