--- a/Copy to SD Card - MKS/Language Packs/language_ca.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_ca.ini
@@ -1,5 +1,5 @@
 #### Language Code:CA
-## Language Version:20221018
+## Language Version:20230112
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -146,18 +146,18 @@ label_power_failed:¿Continuar imprimint?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:SD TFT
-label_tft_sd_read_error:Error a la targeta SD TFT!
-label_tft_sd_inserted:¡Targeta inserida!
-label_tft_sd_removed:¡Targeta extreta!
-label_tft_sd_not_detected:No SD Card detected.
+label_tft_sd:SD card
+label_tft_sd_inserted:¡Targeta inserida
+label_tft_sd_removed:¡Targeta extreta
+label_tft_sd_not_detected:No SD card detected!
+label_tft_sd_read_error:Error a la targeta SD!
 label_tft_usb:Pendrive
-label_tft_usb_read_error:¡Error al Pendrive!
-label_tft_usb_inserted:¡Pendrive inserit!
-label_tft_usb_removed:¡Pendrive extret!
-label_tft_usb_not_detected:No USB Disk detected.
-label_onboard_sd:SD Placa
-label_onboard_usb:USB Placa
+label_tft_usb_inserted:¡Pendrive inserit
+label_tft_usb_removed:¡Pendrive extret
+label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_read_error:¡Error al pendrive!
+label_onboard_sd:SD placa
+label_onboard_usb:USB placa
 label_onboard_sd_read_error:Error a la targeta SD de la placa!
 label_filament_runout:¡Filament esgotat!
 label_disable_steppers:Disarm All
@@ -268,6 +268,7 @@ label_level_corner_info:Edge distance is below probe offset X/Y and some target 
 label_p_offset:P Offset
 label_h_offset:H Offset
 label_distance:Distance
+label_shim:Shim
 label_load_unload:Load/Unload
 label_load_unload_short:(Un)Load
 label_touchscreen_adjust:Calibrar
@@ -296,7 +297,6 @@ label_unifiedmove:Moviment
 label_unifiedheat:Calor/Ventilador
 label_touch_to_exit:Toca qualsevol lloc per sortir
 label_mainmenu:Menú
-label_leveling_edge_distance:Bed edge distance
 label_tuning:Tuning
 label_mpc:MPC
 label_mpc_title:MPC autotune
