--- a/Copy to SD Card - MKS/Language Packs/language_fr.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_fr.ini
@@ -1,5 +1,5 @@
 #### Language Code:FR
-## Language Version:20221018
+## Language Version:20230112
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -146,16 +146,16 @@ label_power_failed:Continuer l'impression ?
 label_process_running:Processus en cours ! Veuillez patienter
 label_process_completed:Processus terminé !
 label_process_aborted:Processus annulé !
-label_tft_sd:SD TFT
+label_tft_sd:Carte SD
+label_tft_sd_inserted:Carte SD insérée
+label_tft_sd_removed:Carte SD retirée
+label_tft_sd_not_detected:Aucune carte SD détectée !
 label_tft_sd_read_error:Erreur de lecture de la carte SD !
-label_tft_sd_inserted:Carte insérée !
-label_tft_sd_removed:Carte retirée !
-label_tft_sd_not_detected:Aucune carte SD détectée.
-label_tft_usb:USB TFT
+label_tft_usb:Clé USB
+label_tft_usb_inserted:Clé USB insérée
+label_tft_usb_removed:Clé USB retirée
+label_tft_usb_not_detected:Aucune clé USB détectée !
 label_tft_usb_read_error:Erreur de lecture de la clé USB !
-label_tft_usb_inserted:Clé USB insérée !
-label_tft_usb_removed:Clé USB retirée !
-label_tft_usb_not_detected:Aucune clé USB détectée.
 label_onboard_sd:microSD CM
 label_onboard_usb:USB CM
 label_onboard_sd_read_error:Erreur de lecture du port de la carte mère !
@@ -268,6 +268,7 @@ label_level_corner_info:Distance de bord inférieure au décalage X/Y du palpeur
 label_p_offset:Z Offset
 label_h_offset:H Offset
 label_distance:Distance
+label_shim:Shim
 label_load_unload:Charger/Décharger
 label_load_unload_short:Dé/Charger
 label_touchscreen_adjust:Ajuster
@@ -296,7 +297,6 @@ label_unifiedmove:Mouvement
 label_unifiedheat:Chauffer
 label_touch_to_exit:Toucher n'importe où pour quitter
 label_mainmenu:Menu
-label_leveling_edge_distance:Distance au bord du plateau
 label_tuning:Tuning
 label_mpc:MPC
 label_mpc_title:Autocalibrage MPC
