--- a/Copy to SD Card - MKS/Language Packs/language_it.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_it.ini
@@ -1,5 +1,5 @@
 #### Language Code:IT
-## Language Version:20221018
+## Language Version:20230112
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -147,15 +147,15 @@ label_process_running:Processo in corso! Attendere il completamento
 label_process_completed:Processo completato!
 label_process_aborted:Processo annullato!
 label_tft_sd:SD card
-label_tft_sd_read_error:Errore lettura SD card!
 label_tft_sd_inserted:SD card inserita
 label_tft_sd_removed:SD card rimossa
 label_tft_sd_not_detected:SD card non rilevata!
+label_tft_sd_read_error:Errore lettura SD card!
 label_tft_usb:Pen drive
-label_tft_usb_read_error:Errore lettura pen drive!
 label_tft_usb_inserted:Pen drive inserita
 label_tft_usb_removed:Pen drive rimossa
 label_tft_usb_not_detected:Pen drive non rilevata!
+label_tft_usb_read_error:Errore lettura pen drive!
 label_onboard_sd:SD scheda
 label_onboard_usb:USB scheda
 label_onboard_sd_read_error:Errore lettura media su scheda!
@@ -268,6 +268,7 @@ label_level_corner_info:Edge distance is below probe offset X/Y and some target 
 label_p_offset:P offset
 label_h_offset:H offset
 label_distance:Distanza
+label_shim:Spessore
 label_load_unload:Carica/scarica
 label_load_unload_short:Scarica
 label_touchscreen_adjust:Calibra
@@ -296,7 +297,6 @@ label_unifiedmove:Movimento
 label_unifiedheat:Risc/vent
 label_touch_to_exit:Tocca ovunque per uscire
 label_mainmenu:Menù
-label_leveling_edge_distance:Distanza dal bordo
 label_tuning:Regola
 label_mpc:MPC
 label_mpc_title:Autoregolazione MPC
