--- a/Copy to SD Card - MKS/Language Packs/language_jp.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_jp.ini
@@ -1,5 +1,5 @@
 #### Language Code:JP
-## Language Version:20221018
+## Language Version:20230112
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -146,16 +146,16 @@ label_power_failed:プリントを継続しますか?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:TFT SD
-label_tft_sd_read_error:TFT SDカードの読み取りがエラー発生しました!
-label_tft_sd_inserted:SDカード入りました!
-label_tft_sd_removed:SDカード出しました!
-label_tft_sd_not_detected:No SD Card detected.
+label_tft_sd:SDカード
+label_tft_sd_inserted:SDカード入りました
+label_tft_sd_removed:SDカード出しました
+label_tft_sd_not_detected:No SD card detected!
+label_tft_sd_read_error:SDカードの読み取りがエラー発生しました!
 label_tft_usb:USBメモリー
+label_tft_usb_inserted:USB diskカード入りました
+label_tft_usb_removed:USB diskカード出しました
+label_tft_usb_not_detected:No USB stick detected!
 label_tft_usb_read_error:USBメモリー読み込みエラー!
-label_tft_usb_inserted:U Diskカード入りました!
-label_tft_usb_removed:U Diskカード出しました!
-label_tft_usb_not_detected:No USB Disk detected.
 label_onboard_sd:内部 mSDカード
 label_onboard_usb:OnboardUSB
 label_onboard_sd_read_error:内部 mSDカードの読み取りがエラー発生しました!
@@ -268,6 +268,7 @@ label_level_corner_info:Edge distance is below probe offset X/Y and some target 
 label_p_offset:P Offset
 label_h_offset:H Offset
 label_distance:Distance
+label_shim:Shim
 label_load_unload:Load/Unload
 label_load_unload_short:(Un)Load
 label_touchscreen_adjust:校正する
@@ -296,7 +297,6 @@ label_unifiedmove:移動
 label_unifiedheat:ヒート&ファン
 label_touch_to_exit:クリックして終了します
 label_mainmenu:メニュー
-label_leveling_edge_distance:Bed edge distance
 label_tuning:Tuning
 label_mpc:MPC
 label_mpc_title:MPC autotune
