--- a/Copy to SD Card - MKS/Language Packs/language_tc.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_tc.ini
@@ -1,5 +1,5 @@
 #### Language Code:TC
-## Language Version:20221018
+## Language Version:20230112
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -147,15 +147,15 @@ label_process_running:正在運行,請稍後
 label_process_completed:處理已完成!
 label_process_aborted:處理已被中斷!
 label_tft_sd:SD卡
-label_tft_sd_read_error:SD卡讀取失敗
 label_tft_sd_inserted:偵測到SD卡
 label_tft_sd_removed:SD卡已拔出
-label_tft_sd_not_detected:No SD Card detected.
+label_tft_sd_not_detected:No SD card detected!
+label_tft_sd_read_error:SD卡讀取失敗
 label_tft_usb:隨身碟
-label_tft_usb_read_error:隨身碟讀取失敗
 label_tft_usb_inserted:偵測到隨身碟
 label_tft_usb_removed:隨身碟已拔出
-label_tft_usb_not_detected:No USB Disk detected.
+label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_read_error:隨身碟讀取失敗
 label_onboard_sd:主機板插槽的SD卡
 label_onboard_usb:主機板插槽的USB
 label_onboard_sd_read_error:主機板的存儲介質讀取失敗
@@ -268,6 +268,7 @@ label_level_corner_info:Edge distance is below probe offset X/Y and some target 
 label_p_offset:P軸偏移
 label_h_offset:H軸偏移
 label_distance:距離
+label_shim:Shim
 label_load_unload:Load/Unload
 label_load_unload_short:(Un)Load
 label_touchscreen_adjust:觸控校正
@@ -296,7 +297,6 @@ label_unifiedmove:運動
 label_unifiedheat:溫度
 label_touch_to_exit:觸控任意位置退出頁面
 label_mainmenu:選單
-label_leveling_edge_distance:手动调平边沿距离
 label_tuning:调整
 label_mpc:MPC
 label_mpc_title:MPC自动整定
