--- a/Copy to SD Card - MKS/Language Packs/language_tr.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_tr.ini
@@ -1,5 +1,5 @@
 #### Language Code:TR
-## Language Version:20221018
+## Language Version:20230112
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -147,15 +147,15 @@ label_process_running:Proses zaten çalışıyor!
 label_process_completed:Proses tamamlandı!
 label_process_aborted:Proses durduruldu!
 label_tft_sd:SD Kart
+label_tft_sd_inserted:SD Kart Takıldı
+label_tft_sd_removed:SD Kart Çıkarıldı
+label_tft_sd_not_detected:No SD card detected!
 label_tft_sd_read_error:SD kart okunamadı!
-label_tft_sd_inserted:SD Kart Takıldı!
-label_tft_sd_removed:SD Kart Çıkarıldı!
-label_tft_sd_not_detected:No SD Card detected.
 label_tft_usb:USB Disk
-label_tft_usb_read_error:USB disk okunamadı!
-label_tft_usb_inserted:USB Disk Takıldı!
-label_tft_usb_removed:USB Disk Çıkarıldı!
-label_tft_usb_not_detected:No USB Disk detected.
+label_tft_usb_inserted:USB Disk Takıldı
+label_tft_usb_removed:USB Disk Çıkarıldı
+label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_read_error:USB Disk okunamadı!
 label_onboard_sd:Dahili SD
 label_onboard_usb:Dahili USB
 label_onboard_sd_read_error:Dahili SD Okunamadı!
@@ -268,6 +268,7 @@ label_level_corner_info:Edge distance is below probe offset X/Y and some target 
 label_p_offset:P Offset
 label_h_offset:H Offset
 label_distance:Mesafe
+label_shim:Shim
 label_load_unload:Yükle/Çıkar
 label_load_unload_short:Yük./Çık.
 label_touchscreen_adjust:Kalibre
@@ -296,7 +297,6 @@ label_unifiedmove:Hareket
 label_unifiedheat:Isıtma/Fan
 label_touch_to_exit:Çıkmak için ekrana dokunun
 label_mainmenu:Menü
-label_leveling_edge_distance:Tabla kenar mesafesi
 label_tuning:Ayar
 label_mpc:MPC
 label_mpc_title:MPC oto. ayar
