--- a/Copy to SD Card root directory to update/Language Packs/language_en.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_en.ini
@@ -21,7 +21,7 @@ label_marlin_fullscreen:Fullscreen Mode
 label_marlin_show_title:Show Title
 label_marlin_type:Marlin Mode Type
 label_move_speed:Move speed(X Y Z)
-label_auto_load_leveling:Auto Save Load Leveling
+label_auto_load_leveling:Auto Load Leveling
 label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
 label_ps_auto_shutdown:Auto shutdown
