--- a/Copy to SD Card root directory to update/Language Packs/language_it.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_it.ini
@@ -21,7 +21,7 @@ label_marlin_fullscreen:Marlin a schermo intero
 label_marlin_show_title:Mostra titolo in Marlin
 label_marlin_type:Modalità Marlin
 label_move_speed:Vel. movimenti(X Y Z)
-label_auto_load_leveling:Auto salva/carica liv.
+label_auto_load_leveling:Auto carica livellam.
 label_probing_z_offset:Sondare per Z offset
 label_z_steppers_alignment:Auto allineamento asse Z
 label_ps_auto_shutdown:Auto spegnimento
