--- a/Copy to SD Card root directory to update/Language Packs/language_br.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_br.ini
@@ -146,18 +146,18 @@ label_power_failed:Continuar imprimindo?
 label_process_running:Processo em andamento! Aguarde a conclusão
 label_process_completed:Processo concluído!
 label_process_aborted:Processo cancelado!
-label_tft_sd:SD card
+label_tft_sd:SD Card
 label_tft_sd_inserted:SD card inserido
 label_tft_sd_removed:SD card removido
 label_tft_sd_not_detected:SD card não detectado!
 label_tft_sd_read_error:Erro de leitura do SD card!
-label_tft_usb:Pen drive
+label_tft_usb:Pen Drive
 label_tft_usb_inserted:Pen drive inserido
 label_tft_usb_removed:Pen drive removido
 label_tft_usb_not_detected:Pen drive não detectado!
 label_tft_usb_read_error:Erro de leitura do pen drive!
-label_onboard_sd:SD onboard
-label_onboard_usb:USB onboard
+label_onboard_sd:SD Onboard
+label_onboard_usb:USB Onboard
 label_onboard_sd_read_error:Erro de leitura do onboard media!
 label_filament_runout:Filamento acabou!
 label_disable_steppers:Des. Motor
