--- a/Copy to SD Card root directory to update/Language Packs/language_de.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_de.ini
@@ -150,11 +150,11 @@ label_tft_sd:SD-Karte
 label_tft_sd_inserted:SD-Karte eingesteckt
 label_tft_sd_removed:SD-Karte entfernt
 label_tft_sd_not_detected:No SD card detected!
-label_tft_sd_read_error:SD-Karte Lesefehler!
+label_tft_sd_read_error:SD-Karte lesefehler!
 label_tft_usb:USB-Stick
 label_tft_usb_inserted:USB-Stick eingesteckt
 label_tft_usb_removed:USB-Stick entfernt
-label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_not_detected:No USB disk detected!
 label_tft_usb_read_error:USB-Stick Lesefehler!
 label_onboard_sd:Onboard SD
 label_onboard_usb:OnboardUSB
