--- a/Copy to SD Card root directory to update/Language Packs/language_en.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_en.ini
@@ -146,16 +146,16 @@ label_power_failed:Continue printing?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:SD card
+label_tft_sd:SD Card
 label_tft_sd_inserted:SD card inserted
 label_tft_sd_removed:SD card removed
 label_tft_sd_not_detected:No SD card detected!
 label_tft_sd_read_error:SD card reading error!
-label_tft_usb:USB stick
-label_tft_usb_inserted:USB stick inserted
-label_tft_usb_removed:USB stick removed
-label_tft_usb_not_detected:No USB stick detected!
-label_tft_usb_read_error:USB stick reading error!
+label_tft_usb:USB Disk
+label_tft_usb_inserted:USB disk inserted
+label_tft_usb_removed:USB disk removed
+label_tft_usb_not_detected:No USB disk detected!
+label_tft_usb_read_error:USB disk reading error!
 label_onboard_sd:Onboard SD
 label_onboard_usb:OnboardUSB
 label_onboard_sd_read_error:Onboard media reading error!
