--- a/Copy to SD Card root directory to update/Language Packs/language_pl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_pl.ini
@@ -154,7 +154,7 @@ label_tft_sd_read_error:Błąd odczytu karty SD wyświetlacza!
 label_tft_usb:Dysk USB
 label_tft_usb_inserted:Dysk USB włożony
 label_tft_usb_removed:Dysk USB wyjęty
-label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_not_detected:No USB disk detected!
 label_tft_usb_read_error:Błąd odczytu dysku USB!
 label_onboard_sd:Onboard SD
 label_onboard_usb:OnboardUSB
