--- a/Copy to SD Card root directory to update/Language Packs/language_ru.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_ru.ini
@@ -154,7 +154,7 @@ label_tft_sd_read_error:Ошибка чтения SD карты!
 label_tft_usb:Флеш карта
 label_tft_usb_inserted:Флеш карта вставлена
 label_tft_usb_removed:Флеш карта извлечена
-label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_not_detected:No USB disk detected!
 label_tft_usb_read_error:Ошибка чтения флеш карты!
 label_onboard_sd:SD платы
 label_onboard_usb:USB платы
