--- a/Copy to SD Card root directory to update/Language Packs/language_cn.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cn.ini
@@ -154,7 +154,7 @@ label_tft_sd_read_error:读SD卡出错!
 label_tft_usb:USB盘
 label_tft_usb_inserted:USB盘已插入
 label_tft_usb_removed:USB盘已拔出
-label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_not_detected:No USB disk detected!
 label_tft_usb_read_error:读USB盘出错!
 label_onboard_sd:板载SD
 label_onboard_usb:板载USB
