--- a/Copy to SD Card root directory to update/Language Packs/language_cz.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cz.ini
@@ -146,15 +146,15 @@ label_power_failed:Obnovit tisk?
 label_process_running:Probíhá proces!
 label_process_completed:Proces dokončen!
 label_process_aborted:Proces přerušen!
-label_tft_sd:SD karta
+label_tft_sd:SD Karta
 label_tft_sd_inserted:SD karta vložena
 label_tft_sd_removed:SD karta vyjmuta
 label_tft_sd_not_detected:SD karta není detekována!
 label_tft_sd_read_error:Chyba při čtení SD karty!
-label_tft_usb:USB disku
-label_tft_usb_inserted:USB disku vložen
-label_tft_usb_removed:USB disku vyjmut
-label_tft_usb_not_detected:USB disku není detekován!
+label_tft_usb:USB Disk
+label_tft_usb_inserted:USB disk vložen
+label_tft_usb_removed:USB disk vyjmut
+label_tft_usb_not_detected:USB disk není detekován!
 label_tft_usb_read_error:Chyba při čtení USB disku!
 label_onboard_sd:Onboard SD
 label_onboard_usb:Onboard USB
