--- a/Copy to SD Card root directory to update/Language Packs/language_es.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_es.ini
@@ -21,7 +21,7 @@ label_marlin_fullscreen:Marlin mode in fullscreen
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Move speed(X Y Z)
-label_auto_load_leveling:Auto Save Load Leveling
+label_auto_load_leveling:Auto Load Leveling
 label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
 label_ps_auto_shutdown:Apag. aut.
@@ -146,7 +146,7 @@ label_power_failed:¿Continuar imprimiendo?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:SD card
+label_tft_sd:SD Card
 label_tft_sd_inserted:¡Tarjeta insertada
 label_tft_sd_removed:¡Tarjeta extraida
 label_tft_sd_not_detected:No SD card detected!
@@ -154,10 +154,10 @@ label_tft_sd_read_error:¡Error en la tarjeta SD!
 label_tft_usb:Pendrive
 label_tft_usb_inserted:¡Pendrive insertado
 label_tft_usb_removed:¡Pendrive extraido
-label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_not_detected:No USB disk detected!
 label_tft_usb_read_error:¡Error en el pendrive!
-label_onboard_sd:SD placa
-label_onboard_usb:USB placa
+label_onboard_sd:SD Placa
+label_onboard_usb:USB Placa
 label_onboard_sd_read_error:¡Error en la tarjeta media de la placa!
 label_filament_runout:¡Filamento agotado!
 label_disable_steppers:Disarm All
