--- a/Copy to SD Card root directory to update/Language Packs/language_jp.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_jp.ini
@@ -21,7 +21,7 @@ label_marlin_fullscreen:フルスクリーンでマーリンモード
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:移動速度(X Y Z)
-label_auto_load_leveling:Auto Save Load Leveling
+label_auto_load_leveling:Auto Load Leveling
 label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
 label_ps_auto_shutdown:オートパワー
@@ -154,7 +154,7 @@ label_tft_sd_read_error:SDカードの読み取りがエラー発生しました
 label_tft_usb:USBメモリー
 label_tft_usb_inserted:USB diskカード入りました
 label_tft_usb_removed:USB diskカード出しました
-label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_not_detected:No USB disk detected!
 label_tft_usb_read_error:USBメモリー読み込みエラー!
 label_onboard_sd:内部 mSDカード
 label_onboard_usb:OnboardUSB
