--- a/Copy to SD Card root directory to update/Language Packs/language_pt.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_pt.ini
@@ -21,7 +21,7 @@ label_marlin_fullscreen:Marlin mode in fullscreen
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Move speed(X Y Z)
-label_auto_load_leveling:Auto Save Load Leveling
+label_auto_load_leveling:Auto Load Leveling
 label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
 label_ps_auto_shutdown:Auto Power
@@ -146,16 +146,16 @@ label_power_failed:Continuar a imprimir?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:SD card
+label_tft_sd:SD Cartao
 label_tft_sd_inserted:Cartao inserido
 label_tft_sd_removed:Cartao removido
 label_tft_sd_not_detected:No SD card detected!
 label_tft_sd_read_error:Erro a ler SD card!
-label_tft_usb:USB stick
-label_tft_usb_inserted:USB stick inserido
-label_tft_usb_removed:USB stick removido
-label_tft_usb_not_detected:No USB stick detected!
-label_tft_usb_read_error:Erro a ler USB stick!
+label_tft_usb:USB Disk
+label_tft_usb_inserted:USB disk inserido
+label_tft_usb_removed:USB disk removido
+label_tft_usb_not_detected:No USB disk detected!
+label_tft_usb_read_error:Erro a ler USB disk!
 label_onboard_sd:Onboard SD
 label_onboard_usb:OnboardUSB
 label_onboard_sd_read_error:Erro a ler onboard media!
