--- a/Copy to SD Card root directory to update/Language Packs/language_sk.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_sk.ini
@@ -21,7 +21,7 @@ label_marlin_fullscreen:Marlin mode in fullscreen
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Rýchlosť pohybu XYZ
-label_auto_load_leveling:Auto Save Load Leveling
+label_auto_load_leveling:Auto Load Leveling
 label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
 label_ps_auto_shutdown:Auto vyp.
@@ -154,7 +154,7 @@ label_tft_sd_read_error:Chyba pri načítaní SD karty!
 label_tft_usb:USB kľúč
 label_tft_usb_inserted:USB kľúč vložený
 label_tft_usb_removed:USB kľúč odstránený
-label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_not_detected:No USB disk detected!
 label_tft_usb_read_error:Chyba pri načítaní USB kľúča!
 label_onboard_sd:SD karta na doske
 label_onboard_usb:USB na doske
