--- a/Copy to SD Card root directory to update/Language Packs/language_sl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_sl.ini
@@ -21,7 +21,7 @@ label_marlin_fullscreen:Marlin čez cel zaslon
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Hitr. pomika (X Y Z)
-label_auto_load_leveling:Auto Save Load Leveling
+label_auto_load_leveling:Auto Load Leveling
 label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
 label_ps_auto_shutdown:Samodejni izklop
@@ -146,15 +146,15 @@ label_power_failed:Nadaljuj s tiskanjem?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:SD kartica
+label_tft_sd:SD Card
 label_tft_sd_inserted:Kartica vstavljena
 label_tft_sd_removed:Kartica odstranjena
 label_tft_sd_not_detected:No SD card detected!
 label_tft_sd_read_error:Napaka branja SD kartica!
-label_tft_usb:USB diska
-label_tft_usb_inserted:USB diska vstavljen
-label_tft_usb_removed:USB diska odstranjen
-label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb:USB Disk
+label_tft_usb_inserted:USB disk vstavljen
+label_tft_usb_removed:USB disk odstranjen
+label_tft_usb_not_detected:No USB disk detected!
 label_tft_usb_read_error:Napaka branja USB diska!
 label_onboard_sd:SKR SD
 label_onboard_usb:SKR USB
