--- a/Copy to SD Card root directory to update/Language Packs/language_tc.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_tc.ini
@@ -21,7 +21,7 @@ label_marlin_fullscreen:全螢幕Marlin模式
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:移動速度(X Y Z)
-label_auto_load_leveling:Auto Save Load Leveling
+label_auto_load_leveling:Auto Load Leveling
 label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
 label_ps_auto_shutdown:自動關機
@@ -154,7 +154,7 @@ label_tft_sd_read_error:SD卡讀取失敗
 label_tft_usb:隨身碟
 label_tft_usb_inserted:偵測到隨身碟
 label_tft_usb_removed:隨身碟已拔出
-label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_not_detected:No USB disk detected!
 label_tft_usb_read_error:隨身碟讀取失敗
 label_onboard_sd:主機板插槽的SD卡
 label_onboard_usb:主機板插槽的USB
