--- a/Copy to SD Card root directory to update/Language Packs/language_uk.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_uk.ini
@@ -21,7 +21,7 @@ label_marlin_fullscreen:Marlin на весь екран
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Швидкість (X Y Z)
-label_auto_load_leveling:Auto Save Load Leveling
+label_auto_load_leveling:Auto Load Leveling
 label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
 label_ps_auto_shutdown:автовимкнення
@@ -154,7 +154,7 @@ label_tft_sd_read_error:Не можу прочитати SD картку!
 label_tft_usb:Флеш карта
 label_tft_usb_inserted:Флеш карта вставлена
 label_tft_usb_removed:Флеш карта витягнута
-label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_not_detected:No USB disk detected!
 label_tft_usb_read_error:Не можу прочитати флеш картку!
 label_onboard_sd:SD на платі
 label_onboard_usb:USB на платі
