--- a/Copy to SD Card - MKS/Language Packs/language_br.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_br.ini
@@ -1,5 +1,5 @@
 #### Language Code:BR
-## Language Version:20230112
+## Language Version:20230209
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -58,6 +58,7 @@ label_hotend_offset:Offset de acordo com hotend
 label_hotend_pid:Hotend PID
 label_bed_pid:Bed PID
 label_stealth_chop:TMC StealthChop
+label_input_shaping:Input Shaping
 label_delta_configuration:Configuração Delta
 label_delta_tower_angle:Guarnição do ângulo da torre
 label_delta_diagonal_rod:Diagonal Rod Trim
@@ -146,18 +147,18 @@ label_power_failed:Continuar imprimindo?
 label_process_running:Processo em andamento! Aguarde a conclusão
 label_process_completed:Processo concluído!
 label_process_aborted:Processo cancelado!
-label_tft_sd:SD card
+label_tft_sd:SD TFT
 label_tft_sd_inserted:SD card inserido
 label_tft_sd_removed:SD card removido
 label_tft_sd_not_detected:SD card não detectado!
 label_tft_sd_read_error:Erro de leitura do SD card!
-label_tft_usb:Pen drive
+label_tft_usb:Pen Drive
 label_tft_usb_inserted:Pen drive inserido
 label_tft_usb_removed:Pen drive removido
 label_tft_usb_not_detected:Pen drive não detectado!
 label_tft_usb_read_error:Erro de leitura do pen drive!
-label_onboard_sd:SD onboard
-label_onboard_usb:USB onboard
+label_onboard_sd:SD Onboard
+label_onboard_usb:USB Onboard
 label_onboard_sd_read_error:Erro de leitura do onboard media!
 label_filament_runout:Filamento acabou!
 label_disable_steppers:Des. Motor
@@ -338,4 +339,3 @@ label_mesh_valid:Validação de malha
 label_connect_probe:Abaixe a sonda antes de iniciar o ajuste. Levante após terminar.
 label_disconnect_probe:Certifique-se de que a sonda esteja levantada antes de usar este recurso.
 label_calibration:Calibrar
-
