--- a/Copy to SD Card - MKS/Language Packs/language_tr.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_tr.ini
@@ -1,5 +1,5 @@
 #### Language Code:TR
-## Language Version:20230112
+## Language Version:20230209
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -58,6 +58,7 @@ label_hotend_offset:2. Nozül Mesafesi
 label_hotend_pid:Hotend PID
 label_bed_pid:Bed PID
 label_stealth_chop:TMC StealthChop
+label_input_shaping:Input Shaping
 label_delta_configuration:Delta Configuration
 label_delta_tower_angle:Tower Angle Trim
 label_delta_diagonal_rod:Diagonal Rod Trim
@@ -147,15 +148,15 @@ label_process_running:Proses zaten çalışıyor!
 label_process_completed:Proses tamamlandı!
 label_process_aborted:Proses durduruldu!
 label_tft_sd:SD Kart
-label_tft_sd_inserted:SD Kart Takıldı
-label_tft_sd_removed:SD Kart Çıkarıldı
+label_tft_sd_inserted:SD kart Takıldı
+label_tft_sd_removed:SD kart Çıkarıldı
 label_tft_sd_not_detected:No SD card detected!
 label_tft_sd_read_error:SD kart okunamadı!
 label_tft_usb:USB Disk
-label_tft_usb_inserted:USB Disk Takıldı
-label_tft_usb_removed:USB Disk Çıkarıldı
-label_tft_usb_not_detected:No USB stick detected!
-label_tft_usb_read_error:USB Disk okunamadı!
+label_tft_usb_inserted:USB disk Takıldı
+label_tft_usb_removed:USB disk Çıkarıldı
+label_tft_usb_not_detected:No USB disk detected!
+label_tft_usb_read_error:USB disk okunamadı!
 label_onboard_sd:Dahili SD
 label_onboard_usb:Dahili USB
 label_onboard_sd_read_error:Dahili SD Okunamadı!
@@ -338,4 +339,3 @@ label_mesh_valid:Mesh Validation
 label_connect_probe:Connect probe before starting the process. Make sure to disconnect it afterwards.
 label_disconnect_probe:Make sure you have disconnected probe before using this feature.
 label_calibration:Calibrate
-
