--- a/Copy to SD Card - MKS/Language Packs/language_de.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_de.ini
@@ -1,5 +1,5 @@
 #### Language Code:DE
-## Language Version:20230112
+## Language Version:20230209
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -58,6 +58,7 @@ label_hotend_offset:Abstand 2te Düse
 label_hotend_pid:Hotend PID
 label_bed_pid:Bed PID
 label_stealth_chop:TMC StealthChop
+label_input_shaping:Input Shaping
 label_delta_configuration:Delta Konfiguration
 label_delta_tower_angle:Tower Angle Trim
 label_delta_diagonal_rod:Diagonal Rod Trim
@@ -146,15 +147,15 @@ label_power_failed:Druck fortsetzen?
 label_process_running:Prozess läuft bereits!
 label_process_completed:Prozess fertiggestellt!
 label_process_aborted:Prozess abgebrochen!
-label_tft_sd:SD-Karte
+label_tft_sd:TFT SD
 label_tft_sd_inserted:SD-Karte eingesteckt
 label_tft_sd_removed:SD-Karte entfernt
 label_tft_sd_not_detected:No SD card detected!
-label_tft_sd_read_error:SD-Karte Lesefehler!
+label_tft_sd_read_error:SD-Karte lesefehler!
 label_tft_usb:USB-Stick
 label_tft_usb_inserted:USB-Stick eingesteckt
 label_tft_usb_removed:USB-Stick entfernt
-label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_not_detected:No USB disk detected!
 label_tft_usb_read_error:USB-Stick Lesefehler!
 label_onboard_sd:Onboard SD
 label_onboard_usb:OnboardUSB
@@ -338,4 +339,3 @@ label_mesh_valid:Mesh Validierung
 label_connect_probe:Bitte Sensor anschließen, bevor der Vorgang gestartet wird. Danach bitte Sensor wieder trennen.
 label_disconnect_probe:Bitte sicherstellen, dass vor Nutzung dieser Funktion der Sensor getrennt wurde.
 label_calibration:Kalibrierung
-
