--- a/Copy to SD Card - MKS/Language Packs/language_en.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_en.ini
@@ -1,5 +1,5 @@
 #### Language Code:EN
-## Language Version:20230112
+## Language Version:20230209
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -21,7 +21,7 @@ label_marlin_fullscreen:Fullscreen Mode
 label_marlin_show_title:Show Title
 label_marlin_type:Marlin Mode Type
 label_move_speed:Move speed(X Y Z)
-label_auto_load_leveling:Auto Save Load Leveling
+label_auto_load_leveling:Auto Load Leveling
 label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
 label_ps_auto_shutdown:Auto shutdown
@@ -58,6 +58,7 @@ label_hotend_offset:Offset 2nd Nozzle
 label_hotend_pid:Hotend PID
 label_bed_pid:Bed PID
 label_stealth_chop:TMC StealthChop
+label_input_shaping:Input Shaping
 label_delta_configuration:Delta Configuration
 label_delta_tower_angle:Tower Angle Trim
 label_delta_diagonal_rod:Diagonal Rod Trim
@@ -146,16 +147,16 @@ label_power_failed:Continue printing?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:SD card
+label_tft_sd:TFT SD
 label_tft_sd_inserted:SD card inserted
 label_tft_sd_removed:SD card removed
 label_tft_sd_not_detected:No SD card detected!
 label_tft_sd_read_error:SD card reading error!
-label_tft_usb:USB stick
-label_tft_usb_inserted:USB stick inserted
-label_tft_usb_removed:USB stick removed
-label_tft_usb_not_detected:No USB stick detected!
-label_tft_usb_read_error:USB stick reading error!
+label_tft_usb:TFT USB
+label_tft_usb_inserted:USB disk inserted
+label_tft_usb_removed:USB disk removed
+label_tft_usb_not_detected:No USB disk detected!
+label_tft_usb_read_error:USB disk reading error!
 label_onboard_sd:Onboard SD
 label_onboard_usb:OnboardUSB
 label_onboard_sd_read_error:Onboard media reading error!
@@ -338,4 +339,3 @@ label_mesh_valid:Mesh Validation
 label_connect_probe:Connect probe before starting the process. Make sure to disconnect it afterwards.
 label_disconnect_probe:Make sure you have disconnected probe before using this feature.
 label_calibration:Calibrate
-
