--- a/Copy to SD Card - MKS/Language Packs/language_gr.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_gr.ini
@@ -1,5 +1,5 @@
 #### Language Code:GR
-## Language Version:20230112
+## Language Version:20230209
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -21,7 +21,7 @@ label_marlin_fullscreen:Λειτουργία Marlin σε πλήρη οθόνη
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Ταχύτητα κίνησης(X Y Z)
-label_auto_load_leveling:Auto Save Load Leveling
+label_auto_load_leveling:Auto Load Leveling
 label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
 label_ps_auto_shutdown:Αυτόματη απενεργοποίηση
@@ -58,6 +58,7 @@ label_hotend_offset:Offset 2nd Nozzle
 label_hotend_pid:Hotend PID
 label_bed_pid:Bed PID
 label_stealth_chop:TMC StealthChop
+label_input_shaping:Input Shaping
 label_delta_configuration:Delta Configuration
 label_delta_tower_angle:Tower Angle Trim
 label_delta_diagonal_rod:Diagonal Rod Trim
@@ -146,7 +147,7 @@ label_power_failed:Συνέχεια εκτύπωσης;
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:SD card
+label_tft_sd:TFT SD
 label_tft_sd_inserted:Η κάρτα έχει εισαχθεί
 label_tft_sd_removed:Η κάρτα αφαιρέθηκε
 label_tft_sd_not_detected:No SD card detected!
@@ -154,7 +155,7 @@ label_tft_sd_read_error:Σφάλμα ανάγνωσης κάρτας SD οθόν
 label_tft_usb:USB Δίσκος
 label_tft_usb_inserted:Ο USB Δίσκος έχει εισαχθεί
 label_tft_usb_removed:Ο USB Δίσκος αφαιρέθηκε
-label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_not_detected:No USB disk detected!
 label_tft_usb_read_error:Σφάλμα ανάγνωσης USB Δίσκου!
 label_onboard_sd:Ενσωματωμένη κάρτα SD
 label_onboard_usb:Ενσωματωμένη κάρτα USB
@@ -338,4 +339,3 @@ label_mesh_valid:Mesh Validation
 label_connect_probe:Connect probe before starting the process. Make sure to disconnect it afterwards.
 label_disconnect_probe:Make sure you have disconnected probe before using this feature.
 label_calibration:Calibrate
-
