--- a/Copy to SD Card - MKS/Language Packs/language_it.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_it.ini
@@ -1,5 +1,5 @@
 #### Language Code:IT
-## Language Version:20230112
+## Language Version:20230209
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -21,7 +21,7 @@ label_marlin_fullscreen:Marlin a schermo intero
 label_marlin_show_title:Mostra titolo in Marlin
 label_marlin_type:Modalità Marlin
 label_move_speed:Vel. movimenti(X Y Z)
-label_auto_load_leveling:Auto salva/carica liv.
+label_auto_load_leveling:Auto carica livellam.
 label_probing_z_offset:Sondare per Z offset
 label_z_steppers_alignment:Auto allineamento asse Z
 label_ps_auto_shutdown:Auto spegnimento
@@ -58,6 +58,7 @@ label_hotend_offset:Offset secondo hotend
 label_hotend_pid:Hotend PID
 label_bed_pid:Bed PID
 label_stealth_chop:TMC StealthChop
+label_input_shaping:Input Shaping
 label_delta_configuration:Delta Configuration
 label_delta_tower_angle:Tower Angle Trim
 label_delta_diagonal_rod:Diagonal Rod Trim
@@ -338,4 +339,3 @@ label_mesh_valid:Validazione mesh
 label_connect_probe:Connetti la probe prima di iniziare il processo. Disconnettila quando finito.
 label_disconnect_probe:Assicurati che la probe sia disconnessa prima di usare questa funzionalità.
 label_calibration:Calibra
-
