--- a/Copy to SD Card - MKS/Language Packs/language_jp.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_jp.ini
@@ -1,5 +1,5 @@
 #### Language Code:JP
-## Language Version:20230112
+## Language Version:20230209
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -21,7 +21,7 @@ label_marlin_fullscreen:フルスクリーンでマーリンモード
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:移動速度(X Y Z)
-label_auto_load_leveling:Auto Save Load Leveling
+label_auto_load_leveling:Auto Load Leveling
 label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
 label_ps_auto_shutdown:オートパワー
@@ -58,6 +58,7 @@ label_hotend_offset:Offset 2nd Nozzle
 label_hotend_pid:Hotend PID
 label_bed_pid:Bed PID
 label_stealth_chop:TMC StealthChop
+label_input_shaping:Input Shaping
 label_delta_configuration:Delta Configuration
 label_delta_tower_angle:Tower Angle Trim
 label_delta_diagonal_rod:Diagonal Rod Trim
@@ -146,7 +147,7 @@ label_power_failed:プリントを継続しますか?
 label_process_running:Process already running!
 label_process_completed:Process completed!
 label_process_aborted:Process aborted!
-label_tft_sd:SDカード
+label_tft_sd:TFT SD
 label_tft_sd_inserted:SDカード入りました
 label_tft_sd_removed:SDカード出しました
 label_tft_sd_not_detected:No SD card detected!
@@ -154,7 +155,7 @@ label_tft_sd_read_error:SDカードの読み取りがエラー発生しました
 label_tft_usb:USBメモリー
 label_tft_usb_inserted:USB diskカード入りました
 label_tft_usb_removed:USB diskカード出しました
-label_tft_usb_not_detected:No USB stick detected!
+label_tft_usb_not_detected:No USB disk detected!
 label_tft_usb_read_error:USBメモリー読み込みエラー!
 label_onboard_sd:内部 mSDカード
 label_onboard_usb:OnboardUSB
@@ -338,4 +339,3 @@ label_mesh_valid:Mesh Validation
 label_connect_probe:Connect probe before starting the process. Make sure to disconnect it afterwards.
 label_disconnect_probe:Make sure you have disconnected probe before using this feature.
 label_calibration:Calibrate
-
