--- a/Copy to SD Card - BTT/config.ini
+++ b/Copy to SD Card - BTT/config.ini
@@ -145,6 +145,8 @@ tx_slots:2
 #   Options: [disable: 0, enable: 1]
 advanced_ok:0
 
+cmd_checksum:0
+
 #### Emulated M600
 # The TFT intercepts the M600 G-code (filament change) and emulates the handling logic
 # otherwise provided by Marlin firmware.
