--- a/Copy to SD Card - MKS/config.ini
+++ b/Copy to SD Card - MKS/config.ini
@@ -763,6 +763,10 @@ ps_auto_shutdown_temp:50
 
 #### Filament Runout Sensor
 # Select the type of filament runout sensor and its default enabled/disabled state.
+#
+# NOTE: Smart Filament Sensor (SFS) (value 2 or 3) is a sensor based on an encoder disc that
+#       toggles runout pin as filament moves (e.g. the BigTreeTech SFS).
+#
 #   Options: [Normal Disabled: 0, Normal Enabled: 1, Smart Disabled: 2, Smart Enabled: 3]
 fil_runout:1
 
@@ -787,6 +791,10 @@ fil_runout_noise_threshold:200
 #### Smart Filament Runout Detection
 # Used in conjunction with an SFS (Smart Filament Sensor) based on an encoder disc that
 # toggles runout pin as filament moves.
+#
+# NOTE: This setting is taken into account by the TFT only in case "fil_runout" setting is
+#       set to 2 or 3 (an SFS is used).
+#
 #   Unit: [distance in mm]
 #   Value range: [min: 1, max: 50]
 fil_runout_distance:7
