--- a/Copy to SD Card root directory to update/Language Packs/language_br.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_br.ini
@@ -5,7 +5,7 @@
 
 label_language:Português BRASIL
 label_advanced_ok:Advanced OK
-label_cmd_checksum:Command checksum
+label_command_checksum:Command checksum
 label_emulated_m600:M600 emulado
 label_emulated_m109_m190:M109 / M190 emulado
 label_event_led:Event LED
