--- a/Copy to SD Card root directory to update/Language Packs/language_fr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_fr.ini
@@ -5,7 +5,7 @@
 
 label_language:Français
 label_advanced_ok:Advanced OK
-label_cmd_checksum:Command checksum
+label_command_checksum:Command checksum
 label_emulated_m600:Emuler M600
 label_emulated_m109_m190:Emuler M109 / M190
 label_event_led:LED Neopixel
