--- a/Copy to SD Card root directory to update/Language Packs/language_hr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_hr.ini
@@ -5,7 +5,7 @@
 
 label_language:Hrvatski
 label_advanced_ok:Advanced OK
-label_cmd_checksum:Command checksum
+label_command_checksum:Command checksum
 label_emulated_m600:Emuliraj M600
 label_emulated_m109_m190:Emuliraj M109 / M190
 label_event_led:LED event
