--- a/Copy to SD Card root directory to update/Language Packs/language_hu.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_hu.ini
@@ -5,7 +5,7 @@
 
 label_language:Magyar
 label_advanced_ok:Advanced OK
-label_cmd_checksum:Command checksum
+label_command_checksum:Command checksum
 label_emulated_m600:Emulált M600
 label_emulated_m109_m190:Emulált M109 / M190
 label_event_led:Esemény LED
