--- a/Copy to SD Card root directory to update/Language Packs/language_it.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_it.ini
@@ -5,7 +5,7 @@
 
 label_language:Italiano
 label_advanced_ok:OK avanzato
-label_cmd_checksum:Checksum comando
+label_command_checksum:Checksum comando
 label_emulated_m600:M600 emulato
 label_emulated_m109_m190:M109 / M190 emulati
 label_event_led:LED evento
