--- a/TFT/src/User/config_rrf.ini
+++ b/TFT/src/User/config_rrf.ini
@@ -103,7 +103,10 @@ tx_slots:2
 #   support the transmission of G-codes according to the configured "tx_slots" setting.
 # If disabled, the TFT will provide the standard transmission logic based on one G-code per time.
 #
-# NOTE: Disable it in case no ADVANCED_OK feature is requested/needed by the user.
+# NOTE: Disable it in case:
+#       - no ADVANCED_OK feature is requested/needed by the user.
+#       - COMMAND_CHECKSUM feature (see description of next setting "command_checksum") is
+#         requested/needed by the user.
 #
 #   Options: [disable: 0, enable: 1]
 advanced_ok:0
